--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-15 [中菲对峙继续升温 菲民间人士乘船前往争议海域](/articles/dw/1025554.md)
+
 5-15 [美国拟再向以色列提供10亿美元武器](/articles/dw/1025555.md)
 
 5-15 [美国提高关税 “中国冲击波“转向欧洲？](/articles/dw/1025556.md)
@@ -598,6 +600,4 @@
 4-20 [“放水保送”  北京半马冠军被收回金牌](/articles/dw/1025852.md)
 
 4-19 [以伊冲突升级：以色列准备多线作战？](/articles/dw/1025853.md)
-
-4-19 [2024世界新闻摄影奖：痛苦、哀伤与感人的瞬间](/articles/dw/1025854.md)
 
