--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-15 [普习会在即，中俄之间这几个议题有些微妙](/articles/voa/1015620.md)
+
 5-15 [当中俄民族主义者遭遇彼此：“普京大脑”杜金被中国网民“群殴”](/articles/voa/1015621.md)
 
 5-15 [印度法院下令释放被控接受中国资助的编辑](/articles/voa/1015622.md)
@@ -598,6 +600,4 @@
 5-4 [“福建舰”航母海试 分析: 将威胁美台军事战略部署](/articles/voa/1015918.md)
 
 5-4 [欧盟委员会：接受反补贴调查的三家中国车企提供的资料不足](/articles/voa/1015919.md)
-
-5-4 [卡梅伦：乌克兰有权使用英国武器攻击俄罗斯境内目标，莫斯科：如遭到攻击将进行报复](/articles/voa/1015920.md)
 
