--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-15 [斯洛伐克总理菲佐遇刺受伤](/articles/dw/1025552.md)
+
+5-15 [布林肯宣布对乌军援20亿 拜登或会泽连斯基](/articles/dw/1025553.md)
+
 5-15 [中菲对峙继续升温 菲民间人士乘船前往争议海域](/articles/dw/1025554.md)
 
 5-15 [美国拟再向以色列提供10亿美元武器](/articles/dw/1025555.md)
@@ -596,8 +600,4 @@
 4-20 [澳媒：兴奋剂检测呈阳性，中国运动员仍获准参赛](/articles/dw/1025850.md)
 
 4-20 [朝鲜称进行巡航导弹“超大型”弹头试验](/articles/dw/1025851.md)
-
-4-20 [“放水保送”  北京半马冠军被收回金牌](/articles/dw/1025852.md)
-
-4-19 [以伊冲突升级：以色列准备多线作战？](/articles/dw/1025853.md)
 
