--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-16 [外国法官在香港的角色引发争议：彭定康称其扼杀民主运动](/articles/voa/1015613.md)
+
 5-16 [美日正式签署协议，共同开发高超音速导弹的滑翔阶段拦截器](/articles/voa/1015614.md)
 
 5-16 [港驻英官员涉违英国国安法 港经贸办参与情报工作？](/articles/voa/1015615.md)
@@ -598,6 +600,4 @@
 5-4 [美官员：中国洗钱组织十年前不为人知，今天是全球洗钱活动的主导力量](/articles/voa/1015911.md)
 
 5-4 [美日澳菲防长第二次会晤，印太抗中“小分队”渐成形？](/articles/voa/1015912.md)
-
-5-4 [特朗普的可能回归重新燃起了韩国的核辩论](/articles/voa/1015913.md)
 
