--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-16 [斯洛伐克总理遭枪击，伤势危及生命](/articles/voa/1015612.md)
+
 5-16 [外国法官在香港的角色引发争议：彭定康称其扼杀民主运动](/articles/voa/1015613.md)
 
 5-16 [美日正式签署协议，共同开发高超音速导弹的滑翔阶段拦截器](/articles/voa/1015614.md)
@@ -598,6 +600,4 @@
 5-4 [历史性的飞行：美空军部长乘人工智能战斗机起飞体验空战](/articles/voa/1015910.md)
 
 5-4 [美官员：中国洗钱组织十年前不为人知，今天是全球洗钱活动的主导力量](/articles/voa/1015911.md)
-
-5-4 [美日澳菲防长第二次会晤，印太抗中“小分队”渐成形？](/articles/voa/1015912.md)
 
