--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-16 [亿万富翁麦考特表示在组建财团收购TikTok](/articles/voa/1015610.md)
+
+5-16 [众议院共和党人推出法案，拟提高中国制造无人机的关税](/articles/voa/1015611.md)
+
 5-16 [斯洛伐克总理遭枪击，伤势危及生命](/articles/voa/1015612.md)
 
 5-16 [外国法官在香港的角色引发争议：彭定康称其扼杀民主运动](/articles/voa/1015613.md)
@@ -596,8 +600,4 @@
 5-4 [拜登世界新闻自由日发表声明：所有被监禁记者都应获释](/articles/voa/1015908.md)
 
 5-4 [克里姆林宫：如西方直接卷入，俄罗斯将把乌克兰战争升级](/articles/voa/1015909.md)
-
-5-4 [历史性的飞行：美空军部长乘人工智能战斗机起飞体验空战](/articles/voa/1015910.md)
-
-5-4 [美官员：中国洗钱组织十年前不为人知，今天是全球洗钱活动的主导力量](/articles/voa/1015911.md)
 
