--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-16 [衣者朝新｜与故乡战斗，随时准备老死不相往来](/articles/cdt/340680.md)
+
 5-15 [历史研习社｜林则徐在新疆的另一面](/articles/cdt/340684.md)
 
 5-15 [剥洋葱People｜南京林业大学青年教师自杀，校方否认“非升即走”](/articles/cdt/340687.md)
@@ -598,6 +600,4 @@
 4-13 [【CDT报告汇】博明：美国外交界“房间里的大象”，没人知道对华竞争的最终目标是什么（外二篇）](/articles/cdt/341810.md)
 
 4-12 [冰点周刊｜七个“硬石头”无罪](/articles/cdt/341811.md)
-
-4-12 [维舟｜对信众来说，批评是不可能的](/articles/cdt/341813.md)
 
