--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-16 [美国封禁TikTok是中共宣传的胜利](/articles/nyt/1042766.md)
+
 5-15 [拜登和特朗普的对华贸易战有何不同](/articles/nyt/1042767.md)
 
 5-15 [拜登政府大幅提高对华关税，电动汽车关税增至100%](/articles/nyt/1042768.md)
@@ -598,6 +600,4 @@
 2-5 [习近平“核革命”背后的忧虑和雄心](/articles/nyt/1043064.md)
 
 2-5 [抢占iPhone生产份额，印度制造取代中国制造？](/articles/nyt/1043065.md)
-
-2-2 [中美重回谈判桌，但言辞分歧凸显双边关系脆弱性](/articles/nyt/1043066.md)
 
