--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+5-16 [前美国务卿蓬佩奥将赴台参加赖清德就职仪式，批习近平欲摧毁台湾人民生活福祉](/articles/voa/1015605.md)
+
+5-16 [普京抵达北京，展示威权盟友的团结](/articles/voa/1015606.md)
+
+5-16 [乌军从东北部分地区撤退，布林肯在基辅宣布20亿美元新军援](/articles/voa/1015607.md)
+
+5-16 [以色列防长与总理内塔尼亚胡就战后加沙治理问题争吵不休](/articles/voa/1015608.md)
+
+5-16 [拜登和特朗普同意在6月和9月辩论](/articles/voa/1015609.md)
+
 5-16 [亿万富翁麦考特表示在组建财团收购TikTok](/articles/voa/1015610.md)
 
 5-16 [众议院共和党人推出法案，拟提高中国制造无人机的关税](/articles/voa/1015611.md)
@@ -590,14 +600,4 @@
 5-4 [法国维吾尔人: 巴黎欢迎习近平到访，如被马克龙“打了一巴掌”](/articles/voa/1015903.md)
 
 5-4 [美国中情局长与哈马斯将于开罗展开加沙停火谈判](/articles/voa/1015904.md)
-
-5-4 [欧中贸易阴云不散，习近平访欧面临多重挑战](/articles/voa/1015905.md)
-
-5-4 [中国火箭将巴基斯坦月球卫星送入太空](/articles/voa/1015906.md)
-
-5-4 [一名美国众议员因涉阿塞拜疆的受贿指控而被起诉](/articles/voa/1015907.md)
-
-5-4 [拜登世界新闻自由日发表声明：所有被监禁记者都应获释](/articles/voa/1015908.md)
-
-5-4 [克里姆林宫：如西方直接卷入，俄罗斯将把乌克兰战争升级](/articles/voa/1015909.md)
 
