--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-16 [中菲对峙升级，中国出动数十艘舰艇拦截菲律宾抗议船队](/articles/nyt/1042765.md)
+
 5-16 [美国封禁TikTok是中共宣传的胜利](/articles/nyt/1042766.md)
 
 5-15 [拜登和特朗普的对华贸易战有何不同](/articles/nyt/1042767.md)
@@ -598,6 +600,4 @@
 2-5 [欢迎来到“大理福尼亚”：中国年轻人的“世外桃源”](/articles/nyt/1043063.md)
 
 2-5 [习近平“核革命”背后的忧虑和雄心](/articles/nyt/1043064.md)
-
-2-5 [抢占iPhone生产份额，印度制造取代中国制造？](/articles/nyt/1043065.md)
 
