--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-16 [青年志Youthology｜当招聘方称“我们想招一位男同志”](/articles/cdt/340675.md)
+
 5-16 [衣者朝新｜与故乡战斗，随时准备老死不相往来](/articles/cdt/340680.md)
 
 5-16 [每日一语 2024.5.15](/articles/cdt/340682.md)
@@ -598,6 +600,4 @@
 4-12 [邹思聪｜危险者的聚会](/articles/cdt/341806.md)
 
 4-12 [人间三角｜一言以蔽之，老实人不够用了](/articles/cdt/341808.md)
-
-4-13 [【CDT报告汇】博明：美国外交界“房间里的大象”，没人知道对华竞争的最终目标是什么（外二篇）](/articles/cdt/341810.md)
 
