--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-16 [法属新喀里多尼亚暴乱 当局封禁TikTok防止冲突扩大](/articles/voa/1015599.md)
+
 5-16 [菲律宾民间船队放弃接近中国控制的斯卡伯勒浅滩](/articles/voa/1015600.md)
 
 5-16 [美国校园抗议中的华人留学生：漠然、回避与感同身受](/articles/voa/1015601.md)
@@ -598,6 +600,4 @@
 5-4 [中国警示录：崩溃、停滞、还是转型 ？---专访中国独立作家王力雄](/articles/voa/1015897.md)
 
 5-4 [中国解除购房限制 分析: 习近平“房住不炒”遭打脸](/articles/voa/1015898.md)
-
-5-4 [美国联手盟友在太平洋岛国与中国展开角力](/articles/voa/1015899.md)
 
