--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-16 [维舟｜“中国文化几千年来从未没落过”](/articles/cdt/340671.md)
+
+5-16 [衣者褚｜一个县委书记被攻陷之始末](/articles/cdt/340673.md)
+
 5-16 [青年志Youthology｜当招聘方称“我们想招一位男同志”](/articles/cdt/340675.md)
 
 5-16 [衣者朝新｜与故乡战斗，随时准备老死不相往来](/articles/cdt/340680.md)
@@ -596,8 +600,4 @@
 4-13 [【404文库】老爸讲科学｜这批仁丹，汞含量超欧盟标准9.7万倍](/articles/cdt/341797.md)
 
 4-12 [冷杉RECORD｜AI标注流水线上，被抛弃的“妈妈工人”](/articles/cdt/341804.md)
-
-4-12 [邹思聪｜危险者的聚会](/articles/cdt/341806.md)
-
-4-12 [人间三角｜一言以蔽之，老实人不够用了](/articles/cdt/341808.md)
 
