--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-16 [微软征询中国AI团队迁移意向](/articles/dw/1025545.md)
+
 5-16 [斯洛伐克总理遭槍擊 凶嫌“政治动机”犯案](/articles/dw/1025546.md)
 
 5-16 [「老朋友」再相會 普丁抵北京會習近平](/articles/dw/1025547.md)
@@ -598,6 +600,4 @@
 4-21 [男性也有更年期 如何應對很重要](/articles/dw/1025843.md)
 
 4-21 [专访: 为全中国争自由 香港就不会死](/articles/dw/1025844.md)
-
-4-20 [王毅：奥库斯协议“引发严重核扩散风险”](/articles/dw/1025845.md)
 
