--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-16 [德国经济学家：对中国电动车关税加码是一种政治表态](/articles/dw/1025544.md)
+
 5-16 [微软征询中国AI团队迁移意向](/articles/dw/1025545.md)
 
 5-16 [斯洛伐克总理遭槍擊 凶嫌“政治动机”犯案](/articles/dw/1025546.md)
@@ -598,6 +600,4 @@
 4-21 [印度贫富差距悬殊 富人多富？  穷人多穷？](/articles/dw/1025842.md)
 
 4-21 [男性也有更年期 如何應對很重要](/articles/dw/1025843.md)
-
-4-21 [专访: 为全中国争自由 香港就不会死](/articles/dw/1025844.md)
 
