--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-16 [泽连斯基前往哈尔科夫视察前线战况，习近平普京誓言深化战略合作](/articles/voa/1015593.md)
+
 5-16 [台湾推进“资安即国安”战略 美台联手“数位团结”](/articles/voa/1015594.md)
 
 5-16 [中国日益依赖越南帮助规避美国对华贸易限制措施](/articles/voa/1015595.md)
@@ -598,6 +600,4 @@
 5-5 [休斯敦准备抗击风暴造成的洪水泛滥](/articles/voa/1015891.md)
 
 5-5 [布林肯：尽管存在中国的影响力，但美国仍为太平洋岛国做出贡献](/articles/voa/1015892.md)
-
-5-5 [中国再提“君子协定”，专家：中方无证据只能任由杜特尔特去说](/articles/voa/1015893.md)
 
