--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-16 [美中AI竞争加剧，微软拟将大批关键技术工程师迁离中国](/articles/voa/1015592.md)
+
 5-16 [泽连斯基前往哈尔科夫视察前线战况，习近平普京誓言深化战略合作](/articles/voa/1015593.md)
 
 5-16 [台湾推进“资安即国安”战略 美台联手“数位团结”](/articles/voa/1015594.md)
@@ -598,6 +600,4 @@
 5-5 [俄军炸平乌克兰东部顿涅茨克地区的村庄](/articles/voa/1015890.md)
 
 5-5 [休斯敦准备抗击风暴造成的洪水泛滥](/articles/voa/1015891.md)
-
-5-5 [布林肯：尽管存在中国的影响力，但美国仍为太平洋岛国做出贡献](/articles/voa/1015892.md)
 
