--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-17 [中俄合作不针对第三方？普习会表明立场将美国视为安全威胁](/articles/voa/1015587.md)
+
+5-17 [美再将26家中国公司列入《防止维吾尔人强迫劳动法》实体清单](/articles/voa/1015588.md)
+
 5-17 [习普会评估：习近平能给普京的支援有限](/articles/voa/1015589.md)
 
 5-16 [乌克兰和平峰会已有50国报名参加，俄罗斯称没有俄的参加峰会就是徒劳](/articles/voa/1015590.md)
@@ -596,8 +600,4 @@
 5-5 [习近平抵达巴黎 马克龙料将就贸易和乌克兰问题向中国施压](/articles/voa/1015885.md)
 
 5-5 [朝鲜驻联合国代表：即使联合国新设对朝制裁小组也终将失败](/articles/voa/1015886.md)
-
-5-5 [日本与印度反驳拜登称其为“排外”国家的发言](/articles/voa/1015887.md)
-
-5-5 [俄罗斯将乌克兰总统泽连斯基列入通缉名单 乌国反讥俄国感到绝望](/articles/voa/1015888.md)
 
