--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-17 [中国将“惩戒”五名台湾名嘴 当事人: 光荣的制裁、迟来的荣耀](/articles/voa/1015585.md)
+
 5-17 [巴拉圭总统将参加台湾新总统就职仪式](/articles/voa/1015586.md)
 
 5-17 [中俄合作不针对第三方？普习会表明立场将美国视为安全威胁](/articles/voa/1015587.md)
@@ -598,6 +600,4 @@
 5-5 [中共新“五反” 预示重返毛时代？](/articles/voa/1015883.md)
 
 5-5 [极端天气致灾 暴雨、热浪袭击亚洲](/articles/voa/1015884.md)
-
-5-5 [习近平抵达巴黎 马克龙料将就贸易和乌克兰问题向中国施压](/articles/voa/1015885.md)
 
