--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-17 [客座評論：禁制願榮光與經貿辦間諜案](/articles/dw/1025540.md)
+
 5-16 [客座评论：习普会面面临的两大棘手问题](/articles/dw/1025541.md)
 
 5-16 [中俄“深化”关系 何为新时代战略伙伴？](/articles/dw/1025542.md)
@@ -598,6 +600,4 @@
 4-21 [德国需全面“翻新改造” 但谁来买单？](/articles/dw/1025838.md)
 
 4-21 [为什么越来越多的德国市长想辞职走人](/articles/dw/1025839.md)
-
-4-21 [面对中国和美国，欧盟的竞争优势何在？](/articles/dw/1025840.md)
 
