--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-17 [蔡英文即将卸任，美学者称她留给赖清德一个处于强健地位的台湾](/articles/voa/1015579.md)
+
+5-17 [人权组织敦促泰国停止强迫持不同政见者返回其母国](/articles/voa/1015580.md)
+
 5-17 [从举行联合军演到允许盘踞云朗基地，柬埔寨沦为中共军事附庸？](/articles/voa/1015581.md)
 
 5-17 [以色列称将有更多军队进入加沙南部的拉法](/articles/voa/1015582.md)
@@ -596,8 +600,4 @@
 5-6 [习近平抵达巴黎展开欧洲之行，但中欧贸易争端阴霾如影随形](/articles/voa/1015877.md)
 
 5-5 [开罗谈判持续，但加沙停火希望似更为渺茫](/articles/voa/1015878.md)
-
-5-5 [乌克兰在战争中度过第三个复活节，泽连斯基称上帝肩批乌克兰国旗](/articles/voa/1015879.md)
-
-5-5 [“流亡也不安全” 洛杉矶举行《异见者》观影及示威活动，揭示并抗议中共跨国镇压](/articles/voa/1015880.md)
 
