--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-17 [普京与习近平会面：深化中俄关系，共同对抗西方压力](/articles/nyt/1042760.md)
+
 5-17 [不仅普京需要中国，俄罗斯也同样需要中国](/articles/nyt/1042761.md)
 
 5-16 [做好准备，第二次“中国冲击”来了](/articles/nyt/1042762.md)
@@ -598,6 +600,4 @@
 2-6 [裁员寒潮下的谷歌：“幸福”工作的时代结束了？](/articles/nyt/1043058.md)
 
 2-6 [英国国王查尔斯三世确诊癌症，将暂停公开活动](/articles/nyt/1043059.md)
-
-2-6 [只有美国才能拯救未来](/articles/nyt/1043060.md)
 
