--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-17 [朝官媒：朝鲜领导人的妹妹金与正否认与俄罗斯进行武器交易](/articles/voa/1015574.md)
+
 5-17 [巴拿马新政府考虑在达连隘口增设检查站并对“走线”移民发布遣返令](/articles/voa/1015575.md)
 
 5-17 [北京强力宣传普京访问，同时严格过滤网民评论](/articles/voa/1015576.md)
@@ -598,6 +600,4 @@
 5-6 [巴拿马选出新总统 新政府将面临诸多艰巨任务](/articles/voa/1015872.md)
 
 5-6 [欧盟负责人在同习近平的会谈中将敦促中国“公平”竞争](/articles/voa/1015873.md)
-
-5-6 [拜登向南希·佩洛西、美德加·艾维斯和杨紫琼等人颁发自由勋章](/articles/voa/1015874.md)
 
