--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-17 [每日一语 2024.5.16](/articles/cdt/340656.md)
+
 5-17 [冰川思享号｜年轻人为何不愿缴社保，周小川这回捅破窗户纸了](/articles/cdt/340658.md)
 
 5-17 [奴隶社会｜《我的阿勒泰》：聊聊剧中的女性主义](/articles/cdt/340660.md)
@@ -598,6 +600,4 @@
 4-13 [衣者朝新｜一个老宣传部长眼中的媒体人](/articles/cdt/341775.md)
 
 4-13 [每日一语 2024.4.12](/articles/cdt/341780.md)
-
-4-13 [六神磊磊读金庸｜智己汽车把CEO关进了笼子里](/articles/cdt/341784.md)
 
