--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-17 [特朗普说习近平和普京正联手搞破坏](/articles/voa/1015572.md)
+
 5-17 [韩中经济部长举行视频会议讨论关键矿产供应链合作](/articles/voa/1015573.md)
 
 5-17 [朝官媒：朝鲜领导人的妹妹金与正否认与俄罗斯进行武器交易](/articles/voa/1015574.md)
@@ -598,6 +600,4 @@
 5-6 [盖洛普全球领导力调查：美国和中国，究竟谁更深得人心？](/articles/voa/1015870.md)
 
 5-6 [内塔尼亚胡：如果以色列被迫孤立无援将独立应对](/articles/voa/1015871.md)
-
-5-6 [巴拿马选出新总统 新政府将面临诸多艰巨任务](/articles/voa/1015872.md)
 
