--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-17 [同样面临虚假信息和安全威胁，台湾为何不封禁TikTok](/articles/nyt/1042758.md)
+
 5-17 [对华电动汽车新关税背后，美国车企的深切担忧](/articles/nyt/1042759.md)
 
 5-17 [普京与习近平会面：深化中俄关系，共同对抗西方压力](/articles/nyt/1042760.md)
@@ -598,6 +600,4 @@
 2-7 [特朗普被裁定在干预大选结果案中无豁免权](/articles/nyt/1043056.md)
 
 2-7 [查尔斯患癌症后，英国王室如何运转](/articles/nyt/1043057.md)
-
-2-6 [裁员寒潮下的谷歌：“幸福”工作的时代结束了？](/articles/nyt/1043058.md)
 
