--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-18 [【404文库】宾曰语云｜网红书记朱是西被查，惊人的一幕出现了！](/articles/cdt/340631.md)
+
+5-18 [浣花溪杜甫｜比亚迪4S店火灾，网友猜测是不是灭火器自燃引起？](/articles/cdt/340634.md)
+
 5-18 [经济观察报｜黑镜律师：“指定居所监视居住”悲剧何时休](/articles/cdt/340640.md)
 
 5-18 [维舟｜人们为何热爱阴谋论](/articles/cdt/340648.md)
@@ -596,8 +600,4 @@
 4-14 [【朋友圈】陈光标：不要总惦记百姓口袋里那点散碎银两，他们不需要你们指手画脚](/articles/cdt/341749.md)
 
 4-14 [显微故事｜我是“职业背债人”：卖血不如卖征信，干一票就上岸](/articles/cdt/341752.md)
-
-4-14 [问天刑辩｜徐昕大师——中国死磕律师第一人](/articles/cdt/341754.md)
-
-4-14 [书写者｜这才是真正的抹黑：苏联那些说谎文学是如何诞生的？](/articles/cdt/341756.md)
 
