--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-18 [分析人士：即将就任的台湾总统赖清德面临艰难的平衡](/articles/voa/1015548.md)
+
+5-18 [支持率下滑的拜登努力与黑人选民接触](/articles/voa/1015549.md)
+
 5-18 [报告：中国对“血腥木材”的喜好可能助长了莫桑比克的冲突](/articles/voa/1015550.md)
 
 5-18 [专家：中国日渐式微的北极雄心止步俄罗斯境内](/articles/voa/1015551.md)
@@ -596,8 +600,4 @@
 5-7 [美国官员说，一名美国军人在俄罗斯被捕，被控偷窃](/articles/voa/1015846.md)
 
 5-7 [82岁的桑德斯参议员宣布将竞选连任](/articles/voa/1015847.md)
-
-5-7 [缅甸若开军声称占领了政府军基地并俘虏数百名士兵](/articles/voa/1015848.md)
-
-5-7 [俄罗斯宣布核武演习，回应所谓西方威胁](/articles/voa/1015849.md)
 
