--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-18 [三联生活周刊｜被迫停滞的春耕：“禁令”下贷款种地的农民们](/articles/cdt/340625.md)
+
+5-18 [兽楼处｜睡在实验室门口的科学家](/articles/cdt/340629.md)
+
 5-18 [【404文库】宾曰语云｜网红书记朱是西被查，惊人的一幕出现了！](/articles/cdt/340631.md)
 
 5-18 [浣花溪杜甫｜比亚迪4S店火灾，网友猜测是不是灭火器自燃引起？](/articles/cdt/340634.md)
@@ -596,8 +600,4 @@
 4-15 [【旧文重温】懒得说不得不说｜强制实名制之前没有什么电信诈骗](/articles/cdt/341742.md)
 
 4-14 [每日一语 2024.4.13](/articles/cdt/341746.md)
-
-4-14 [【朋友圈】陈光标：不要总惦记百姓口袋里那点散碎银两，他们不需要你们指手画脚](/articles/cdt/341749.md)
-
-4-14 [显微故事｜我是“职业背债人”：卖血不如卖征信，干一票就上岸](/articles/cdt/341752.md)
 
