--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-18 [路透独家：马斯克拟设立中国数据中心，押注特斯拉的人工智能应用](/articles/voa/1015546.md)
+
 5-18 [立陶宛究竟会不会改变对中国和台湾的关系？](/articles/voa/1015547.md)
 
 5-18 [分析人士：即将就任的台湾总统赖清德面临艰难的平衡](/articles/voa/1015548.md)
@@ -598,6 +600,4 @@
 5-7 [匈牙利和塞尔维亚为习近平铺下红地毯](/articles/voa/1015844.md)
 
 5-7 [特朗普再次因违反禁言令并被法官判定“藐视法庭”](/articles/voa/1015845.md)
-
-5-7 [美国官员说，一名美国军人在俄罗斯被捕，被控偷窃](/articles/voa/1015846.md)
 
