--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -25,6 +25,8 @@
 
 5-18 [建设性意见｜揭露“鬼称”的狂飙兄弟是当代侠客，祝福他们赚大钱](/articles/cdt/340651.md)
 
+5-18 [【CDT周报】第170期：一档音综节目咋就成了“五旬老太守国门”？](/articles/cdt/340652.md)
+
 5-17 [【404帖子】EatWithChina｜从我名下所有银行账户被突然冻结看到的荒谬](/articles/cdt/340654.md)
 
 5-17 [每日一语 2024.5.16](/articles/cdt/340656.md)
@@ -598,6 +600,4 @@
 4-15 [【404帖子】欧洲联盟驻华代表团｜立即释放人权律师余文生和妻子许艳](/articles/cdt/341724.md)
 
 4-15 [维舟｜幼稚的强权主义者](/articles/cdt/341726.md)
-
-4-15 [【404文库】“一小撮人打着反诈旗号，胡作非为，是什么原因？”（外二篇）](/articles/cdt/341738.md)
 
