--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-18 [普京结束访华 美台如此评价](/articles/dw/1025524.md)
+
+5-18 [美驻日大使访与那国岛 强调威慑力重要性](/articles/dw/1025525.md)
+
 5-18 [朝鲜试射自动导航系统弹道导弹](/articles/dw/1025526.md)
 
 5-18 [以军称发现三具人质尸体 美建临时码头在加沙启用](/articles/dw/1025527.md)
@@ -596,8 +600,4 @@
 4-22 [马尔代夫亲中政党赢得压倒性选举胜利](/articles/dw/1025822.md)
 
 4-22 [1175家中国企业参展汉诺威工博会](/articles/dw/1025823.md)
-
-4-22 [德国工业产出预计将进一步下滑](/articles/dw/1025824.md)
-
-4-22 [向乌克兰转让防空系统? 西班牙希腊承受压力](/articles/dw/1025825.md)
 
