--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-19 [黄循财接任新加坡总理：“李氏王朝”落幕，“新加坡模式”失去光芒？](/articles/voa/1015533.md)
+
 5-19 [中国又一名部长出事，不久前还作为“习近平特使”出访他国](/articles/voa/1015534.md)
 
 5-18 [以军在加沙发现三名去年10月7日遭哈马斯绑架的人质遗体](/articles/voa/1015535.md)
@@ -598,6 +600,4 @@
 5-7 [中国云南发生恶性持刀行凶事件，两死二十多伤](/articles/voa/1015831.md)
 
 5-7 [比利牛斯山一对一交谈，马克龙寻求促使习近平在贸易上让步](/articles/voa/1015832.md)
-
-5-7 [德国总理朔尔茨呼吁中国加大努力，减少贫穷国家债务](/articles/voa/1015833.md)
 
