--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-19 [中央司令部：也门胡塞武装发射导弹击中一艘驶向中国的红海油轮](/articles/voa/1015530.md)
+
 5-19 [红木贩运—中国人的需求导致非法贸易屡禁不止](/articles/voa/1015531.md)
 
 5-19 [乌克兰军队在东北边境地区极力制止俄罗斯的推进](/articles/voa/1015532.md)
@@ -598,6 +600,4 @@
 5-8 [德军数十年中最大军事行动：海军舰只驶往印太，陆军计划明年与日军联合军演](/articles/voa/1015828.md)
 
 5-8 [英军方薪资档案疑遭中国黑客入侵，苏纳克称是“恶意行为者”所为](/articles/voa/1015829.md)
-
-5-7 [普京宣誓开启第五个六年总统任期，西方国家抵制就职典礼](/articles/voa/1015830.md)
 
