--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-19 [玖奌杂货铺｜要有多狠，才会从蝼蚁嘴里抢食？](/articles/cdt/340597.md)
+
+5-19 [【重温】维舟｜谣言研究回顾](/articles/cdt/340599.md)
+
 5-18 [每日一语 2024.5.17](/articles/cdt/340611.md)
 
 5-18 [【网络民议】中国“最网盘的导演”，唤醒恍如隔世的疫情记忆](/articles/cdt/340614.md)
@@ -596,8 +600,4 @@
 4-15 [每日一语 2024.4.14](/articles/cdt/341714.md)
 
 4-15 [张3丰的世界｜庆祝“无意义”](/articles/cdt/341717.md)
-
-4-15 [【404帖子】欧洲联盟驻华代表团｜立即释放人权律师余文生和妻子许艳](/articles/cdt/341724.md)
-
-4-15 [维舟｜幼稚的强权主义者](/articles/cdt/341726.md)
 
