--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-19 [乌克兰俄罗斯相互指责攻击居民区的平民](/articles/voa/1015528.md)
+
 5-19 [80万平民在以军行动中没有安全选择的情况下逃离拉法](/articles/voa/1015529.md)
 
 5-19 [中央司令部：也门胡塞武装发射导弹击中一艘驶向中国的红海油轮](/articles/voa/1015530.md)
@@ -598,6 +600,4 @@
 5-8 [世界媒体看中国 - 习近平访欧，乌克兰议题见本色](/articles/voa/1015826.md)
 
 5-8 [因火箭阀门问题，波音首次载人飞船发射被取消](/articles/voa/1015827.md)
-
-5-8 [德军数十年中最大军事行动：海军舰只驶往印太，陆军计划明年与日军联合军演](/articles/voa/1015828.md)
 
