--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-19 [WOMEN我们｜女生回忆：十四岁那年的八九六四](/articles/cdt/340585.md)
+
+5-19 [六神磊磊读金庸｜当狂飙遇上连云港江南七怪](/articles/cdt/340587.md)
+
+5-19 [qf4palestine｜在荷华语酷儿学生的挺巴街头记](/articles/cdt/340592.md)
+
 5-19 [玖奌杂货铺｜要有多狠，才会从蝼蚁嘴里抢食？](/articles/cdt/340597.md)
 
 5-19 [【重温】维舟｜谣言研究回顾](/articles/cdt/340599.md)
@@ -594,10 +600,4 @@
 4-15 [亮见｜北京半程马拉松简直成了赤裸裸的“伴程马拉松”](/articles/cdt/341702.md)
 
 4-15 [六神磊磊读金庸｜从准专业角度复盘：猫一杯为啥玩脱](/articles/cdt/341710.md)
-
-4-15 [【404帖子】海雯娜｜我讲的都是德国、德国、德国，与中国没有任何关系](/articles/cdt/341711.md)
-
-4-15 [每日一语 2024.4.14](/articles/cdt/341714.md)
-
-4-15 [张3丰的世界｜庆祝“无意义”](/articles/cdt/341717.md)
 
