--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-19 [越共提名公安部长苏林接任国家主席](/articles/voa/1015525.md)
+
+5-19 [格鲁吉亚通过“外国影响力”法案 抗议无果下总统行使“象征性”否决权](/articles/voa/1015526.md)
+
 5-19 [赖清德就任台湾总统后，在欧台湾人的身份困境会得到解决吗？](/articles/voa/1015527.md)
 
 5-19 [乌克兰俄罗斯相互指责攻击居民区的平民](/articles/voa/1015528.md)
@@ -596,8 +600,4 @@
 5-8 [过境口岸关闭，加沙援助被切断](/articles/voa/1015823.md)
 
 5-8 [北约轰炸中国使馆周年之际，官媒呼吁中国人“不忘记”，但对外却保持低调](/articles/voa/1015824.md)
-
-5-8 [TikTok就可能将其封禁的法案对美国政府提起诉讼，声称言论自由受侵犯；众院中共问题委员会领袖：TikTok宁肯打官司也不愿与中共决裂](/articles/voa/1015825.md)
-
-5-8 [世界媒体看中国 - 习近平访欧，乌克兰议题见本色](/articles/voa/1015826.md)
 
