--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-19 [中国对欧美日台的化工产品启动反倾销调查](/articles/dw/1025518.md)
+
 5-19 [更多欧盟国家愿意承认巴勒斯坦国 原因几何？](/articles/dw/1025519.md)
 
 5-19 [德国人变懒了吗？](/articles/dw/1025520.md)
@@ -598,6 +600,4 @@
 4-23 [三名德国人涉当华间谍遭捕　中国：停止抹黑](/articles/dw/1025816.md)
 
 4-23 [訪華前夕 布林肯批中侵犯維吾爾人權](/articles/dw/1025817.md)
-
-4-23 [台灣死刑存廢釋憲 三件你要知道的事實](/articles/dw/1025818.md)
 
