--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-19 [越南政治内斗导致错失普京访问？](/articles/dw/1025515.md)
+
 5-19 [俄罗斯冻结德意志银行2.4亿欧元资产](/articles/dw/1025516.md)
 
 5-19 [中俄关系：真朋友还是权宜合作？](/articles/dw/1025517.md)
@@ -598,6 +600,4 @@
 4-23 [AFD重要政客的中国助理涉嫌间谍罪被逮捕](/articles/dw/1025813.md)
 
 4-23 [TikTok促销“令人上瘾” 欧盟发最后通牒](/articles/dw/1025814.md)
-
-4-23 [德国选项党重要政治人物的中国助手涉嫌间谍罪被逮捕](/articles/dw/1025815.md)
 
