--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-20 [突发：搭载伊朗总统莱希的直升机发生故障“硬着陆”，救援人员正赶往现场](/articles/voa/1015517.md)
+
+5-20 [两艘中国军舰驶入西哈努克港，参与中柬年度大规模联合军演](/articles/voa/1015518.md)
+
 5-19 [台湾新总统赖清德将继承蔡英文开创的强劲外交格局，就职演说将向北京展现善意](/articles/voa/1015519.md)
 
 5-19 [英国防大臣：中俄强化关系是对民主和西方生活方式的直接威胁](/articles/voa/1015520.md)
@@ -596,8 +600,4 @@
 5-8 [美中新气候特使将在华盛顿举行首次面对面会谈](/articles/voa/1015815.md)
 
 5-8 [布林肯前往危地马拉出席地区移民会议](/articles/voa/1015816.md)
-
-5-8 [巴基斯坦：位于阿富汗境内的恐怖分子策划了针对中国工程师的自杀式袭击](/articles/voa/1015817.md)
-
-5-8 [美军完成加沙援助码头建设](/articles/voa/1015818.md)
 
