--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-20 [【CDT报告汇】中国当局如何监控和骚扰海外留学生？（外二篇）](/articles/cdt/340558.md)
+
 5-19 [每日一语 2024.5.18](/articles/cdt/340560.md)
 
 5-19 [WOMEN我们｜女生回忆：十四岁那年的八九六四](/articles/cdt/340585.md)
@@ -598,6 +600,4 @@
 4-16 [张3丰的世界｜“爱国幽默”](/articles/cdt/341696.md)
 
 4-15 [极限之外｜战争爆发时，他们兴奋的好像中了奖](/articles/cdt/341701.md)
-
-4-15 [亮见｜北京半程马拉松简直成了赤裸裸的“伴程马拉松”](/articles/cdt/341702.md)
 
