--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-20 [以色列轰炸加沙，白宫代表抵达以色列推动停火谈判](/articles/voa/1015512.md)
+
 5-20 [巴基斯坦部长：巴基斯坦想要北京同阿富汗讨论恐怖主义](/articles/voa/1015513.md)
 
 5-20 [对伊朗总统坠机的国际反应](/articles/voa/1015514.md)
@@ -598,6 +600,4 @@
 5-8 [台湾总统就职典礼在即 军方称准备好应对中国的任何行动](/articles/voa/1015810.md)
 
 5-8 [北约与俄罗斯日益紧张之际 习近平抵访塞尔维亚](/articles/voa/1015811.md)
-
-5-8 [担心以色列对拉法发动大规模攻击 美国阻止了一批弹药运往以色列](/articles/voa/1015812.md)
 
