--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-20 [中国拯救楼市新举措：鼓励地方政府收购库存商品房](/articles/nyt/1042755.md)
+
 5-20 [普京访问哈工大，中俄加强军事联系令西方担忧](/articles/nyt/1042756.md)
 
 5-20 [习近平与普京贴面拥抱，无视西方压力坚定与俄罗斯结盟](/articles/nyt/1042757.md)
@@ -598,6 +600,4 @@
 2-8 [中美关系改变贸易格局：中国已不是美国最大进口国](/articles/nyt/1043053.md)
 
 2-7 [为何硅谷科技巨头仍然在裁员](/articles/nyt/1043054.md)
-
-2-7 [中国间谍？一只鸽子被印度“监禁”八个月](/articles/nyt/1043055.md)
 
