--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-20 [賴清德正式就任 對中喊話：尊重台灣人選擇](/articles/dw/1025513.md)
+
 5-19 [中国军舰抵达柬埔寨参加军演](/articles/dw/1025514.md)
 
 5-19 [越南政治内斗导致错失普京访问？](/articles/dw/1025515.md)
@@ -598,6 +600,4 @@
 4-23 [专访：中国间谍在德国也很活跃](/articles/dw/1025811.md)
 
 4-23 [英国加码军援乌克兰 柏林敦促加大对乌防空援助](/articles/dw/1025812.md)
-
-4-23 [AFD重要政客的中国助理涉嫌间谍罪被逮捕](/articles/dw/1025813.md)
 
