--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-20 [总统莱希坠机身亡，内忧外患之际伊朗面临震荡](/articles/nyt/1042754.md)
+
 5-20 [中国拯救楼市新举措：鼓励地方政府收购库存商品房](/articles/nyt/1042755.md)
 
 5-20 [普京访问哈工大，中俄加强军事联系令西方担忧](/articles/nyt/1042756.md)
@@ -598,6 +600,4 @@
 2-8 [美国强化法律行动，阻止中国等对手获取技术](/articles/nyt/1043052.md)
 
 2-8 [中美关系改变贸易格局：中国已不是美国最大进口国](/articles/nyt/1043053.md)
-
-2-7 [为何硅谷科技巨头仍然在裁员](/articles/nyt/1043054.md)
 
