--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-20 [伊朗总统易卜拉欣·莱希被证实坠机身亡](/articles/voa/1015510.md)
+
+5-20 [台湾总统赖清德就职演说誓言民主不可退让、两岸互不隶属 美国期待合作](/articles/voa/1015511.md)
+
 5-20 [以色列轰炸加沙，白宫代表抵达以色列推动停火谈判](/articles/voa/1015512.md)
 
 5-20 [巴基斯坦部长：巴基斯坦想要北京同阿富汗讨论恐怖主义](/articles/voa/1015513.md)
@@ -596,8 +600,4 @@
 5-8 [冯德莱恩再发警告：必须阻止中国电动车充斥欧盟市场](/articles/voa/1015808.md)
 
 5-8 [史上最热的4月加剧全球暖化担忧](/articles/voa/1015809.md)
-
-5-8 [台湾总统就职典礼在即 军方称准备好应对中国的任何行动](/articles/voa/1015810.md)
-
-5-8 [北约与俄罗斯日益紧张之际 习近平抵访塞尔维亚](/articles/voa/1015811.md)
 
