--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-20 [官方證實伊朗總統萊希墜機死亡](/articles/dw/1025512.md)
+
 5-20 [賴清德正式就任 對中喊話：尊重台灣人選擇](/articles/dw/1025513.md)
 
 5-19 [中国军舰抵达柬埔寨参加军演](/articles/dw/1025514.md)
@@ -598,6 +600,4 @@
 4-23 [网络攻击和盗版仍是德国机械行业防范重点](/articles/dw/1025810.md)
 
 4-23 [专访：中国间谍在德国也很活跃](/articles/dw/1025811.md)
-
-4-23 [英国加码军援乌克兰 柏林敦促加大对乌防空援助](/articles/dw/1025812.md)
 
