--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-20 [英国法院将就维基解密创始人是否引渡美国做出裁决](/articles/voa/1015506.md)
+
+5-20 [伊朗总统坠机身亡 习近平致唁电表达哀悼](/articles/voa/1015507.md)
+
+5-20 [英韩共同主办第二届全球人工智能峰会 应对AI不断进步所带来的风险](/articles/voa/1015508.md)
+
 5-20 [菲律宾指控中国破坏海洋环境 敦促开放“黄岩岛”接受国际审查](/articles/voa/1015509.md)
 
 5-20 [伊朗总统易卜拉欣·莱希被证实坠机身亡](/articles/voa/1015510.md)
@@ -594,10 +600,4 @@
 5-8 [香港上诉庭推翻原审法院裁决，将抗议歌曲《愿荣光归香港》列为禁歌](/articles/voa/1015804.md)
 
 5-8 [国际货币基金组织：贸易碎片化严重威胁全球贸易体系](/articles/voa/1015805.md)
-
-5-8 [传媒大亨黎智英国安审讯远超原定审期](/articles/voa/1015806.md)
-
-5-8 [中国两战舰在柬埔寨云朗基地停泊超五个月，被质疑永久部署](/articles/voa/1015807.md)
-
-5-8 [冯德莱恩再发警告：必须阻止中国电动车充斥欧盟市场](/articles/voa/1015808.md)
 
