--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-20 [唐师三百手｜胖猫舆情事件反转，拒绝脏水流量投喂](/articles/cdt/340521.md)
+
+5-20 [数字力场｜胖猫事件背后真相的真相的真相](/articles/cdt/340523.md)
+
 5-20 [【立此存照】普京访华期间，“尊敬的普京总统我的老朋友”等话题登上热搜](/articles/cdt/340546.md)
 
 5-20 [每日一语 2024.5.19](/articles/cdt/340548.md)
@@ -596,8 +600,4 @@
 4-16 [冰川思想库｜打工人又一次集体破防，调休方案不改不行了](/articles/cdt/341683.md)
 
 4-21 [【网络民议】“第一批丁克夫妻现状曝光，他们都后悔了吗？”](/articles/cdt/341684.md)
-
-4-16 [每日一语 2024.4.15](/articles/cdt/341686.md)
-
-4-16 [天涯行路｜不愧是给张维为大力鼓掌的地方](/articles/cdt/341690.md)
 
