--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-20 [伊朗总统莱希因坠机逝世：宗教统治的坚定捍卫者](/articles/nyt/1042752.md)
+
 5-20 [赖清德就任总统，两岸关系走向与台湾民主未来成焦点](/articles/nyt/1042753.md)
 
 5-20 [总统莱希坠机身亡，内忧外患之际伊朗面临震荡](/articles/nyt/1042754.md)
@@ -598,6 +600,4 @@
 2-9 [中国通缩警报：居民消费价格创14年来最大跌幅](/articles/nyt/1043050.md)
 
 2-8 [苹果Vision Pro测评：令人印象深刻，但“槽点”很多](/articles/nyt/1043051.md)
-
-2-8 [美国强化法律行动，阻止中国等对手获取技术](/articles/nyt/1043052.md)
 
