--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+5-20 [菲律宾敦促中国开放黄岩岛 允许国际监督](/articles/dw/1025502.md)
+
+5-20 [电竞男生去世受关注 警方通报调查结果](/articles/dw/1025503.md)
+
+5-20 [乌克兰战争推高全球军事预算 破历史纪录](/articles/dw/1025504.md)
+
 5-20 [蔡英文卸任台湾总统 拎两只爱猫搬离总统府](/articles/dw/1025505.md)
 
 5-20 [泽连斯基为何得以留任乌克兰总统？](/articles/dw/1025506.md)
@@ -594,10 +600,4 @@
 4-24 [普罗科菲耶夫：D大调第1号交响曲](/articles/dw/1025800.md)
 
 4-24 [乌克兰限制海外领事服务 敦促适龄男性回国参战](/articles/dw/1025801.md)
-
-4-24 [被害者家屬成廢死律師  台灣激辯死刑存廢](/articles/dw/1025802.md)
-
-4-23 [美国精英大学爆发加沙战争抗议 多人被捕](/articles/dw/1025803.md)
-
-4-23 [特斯拉在德超级工厂将裁去400个岗位](/articles/dw/1025804.md)
 
