--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-20 [中国江西贵溪一小学惊爆持刀行凶案，酿至少2死10伤，女凶嫌已被控制](/articles/voa/1015502.md)
+
 5-20 [赖清德吁两岸重启对话 分析:北京或认赖清德的善意不足](/articles/voa/1015503.md)
 
 5-20 [美智库警告:赖清德执政期间，中国拟以“非战争胁迫”进逼台湾](/articles/voa/1015504.md)
@@ -598,6 +600,4 @@
 5-9 [欧洲议会议员：习近平欧洲之行分化美欧同盟的可能性为零](/articles/voa/1015800.md)
 
 5-9 [澳大利亚加大对图瓦卢的财政支持，外长和参议员联袂访图](/articles/voa/1015801.md)
-
-5-9 [美菲“肩并肩”大规模军演，在有争议南中国海击沉假想敌船](/articles/voa/1015802.md)
 
