--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-20 [路透社调查：中国新屋价格2024年将下降5%，房屋销售可能下滑10%](/articles/voa/1015500.md)
+
+5-20 [中国财政收入今年头四个月下跌加快，中央政府荷包缩紧](/articles/voa/1015501.md)
+
 5-20 [中国江西贵溪一小学惊爆持刀行凶案，酿至少2死10伤，女凶嫌已被控制](/articles/voa/1015502.md)
 
 5-20 [赖清德吁两岸重启对话 分析:北京或认赖清德的善意不足](/articles/voa/1015503.md)
@@ -596,8 +600,4 @@
 5-9 [美国撤销某些对华为的出口许可证，北京表示“坚决反对”](/articles/voa/1015798.md)
 
 5-9 [国安新规7月实施 入境中国可随时被查验手机电脑](/articles/voa/1015799.md)
-
-5-9 [欧洲议会议员：习近平欧洲之行分化美欧同盟的可能性为零](/articles/voa/1015800.md)
-
-5-9 [澳大利亚加大对图瓦卢的财政支持，外长和参议员联袂访图](/articles/voa/1015801.md)
 
