--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-20 [赖清德总统宣誓就职之日，北京宣布制裁参与对台军售的三家美国公司](/articles/voa/1015499.md)
+
 5-20 [路透社调查：中国新屋价格2024年将下降5%，房屋销售可能下滑10%](/articles/voa/1015500.md)
 
 5-20 [中国财政收入今年头四个月下跌加快，中央政府荷包缩紧](/articles/voa/1015501.md)
@@ -598,6 +600,4 @@
 5-9 [欧盟成员国达成临时协议，将使用被冻结俄罗斯资产的利润向乌克兰提供军援](/articles/voa/1015797.md)
 
 5-9 [美国撤销某些对华为的出口许可证，北京表示“坚决反对”](/articles/voa/1015798.md)
-
-5-9 [国安新规7月实施 入境中国可随时被查验手机电脑](/articles/voa/1015799.md)
 
