--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-21 [客座評論：賴清德就職演講用ROC對上PRC](/articles/dw/1025501.md)
+
 5-20 [菲律宾敦促中国开放黄岩岛 允许国际监督](/articles/dw/1025502.md)
 
 5-20 [电竞男生去世受关注 警方通报调查结果](/articles/dw/1025503.md)
@@ -598,6 +600,4 @@
 4-24 [美參院通過援烏以台法案  80億美元助印太抗中](/articles/dw/1025799.md)
 
 4-24 [普罗科菲耶夫：D大调第1号交响曲](/articles/dw/1025800.md)
-
-4-24 [乌克兰限制海外领事服务 敦促适龄男性回国参战](/articles/dw/1025801.md)
 
