--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-21 [法属新喀里多尼亚暴乱未歇 澳大利亚、新西兰派专机撤侨](/articles/voa/1015480.md)
+
 5-21 [肯塔基州初选看点](/articles/voa/1015481.md)
 
 5-21 [中国官媒将伊朗总统坠机归咎于美国制裁 海外中文网则称莱希为“德黑兰屠夫”](/articles/voa/1015482.md)
@@ -598,6 +600,4 @@
 5-9 [伊朗官员：国家存在若受威胁将改变核武原则](/articles/voa/1015778.md)
 
 5-9 [拜登公开表态： 若以色列入侵拉法，他不会提供弹药](/articles/voa/1015779.md)
-
-5-9 [台湾新总统即将就职，美国驱逐舰通过台湾海峡](/articles/voa/1015780.md)
 
