--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-21 [ICC申請逮捕以哈領袖 拜登：不該劃上等號](/articles/dw/1025500.md)
+
 5-21 [客座評論：賴清德就職演講用ROC對上PRC](/articles/dw/1025501.md)
 
 5-20 [菲律宾敦促中国开放黄岩岛 允许国际监督](/articles/dw/1025502.md)
@@ -598,6 +600,4 @@
 4-24 [亲巴勒斯坦抗议活动在美国大学蔓延](/articles/dw/1025798.md)
 
 4-24 [美參院通過援烏以台法案  80億美元助印太抗中](/articles/dw/1025799.md)
-
-4-24 [普罗科菲耶夫：D大调第1号交响曲](/articles/dw/1025800.md)
 
