--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-21 [賴清德就職：「史上最佳」的台日關係如何互動？](/articles/dw/1025499.md)
+
 5-21 [ICC申請逮捕以哈領袖 拜登：不該劃上等號](/articles/dw/1025500.md)
 
 5-21 [客座評論：賴清德就職演講用ROC對上PRC](/articles/dw/1025501.md)
@@ -598,6 +600,4 @@
 4-24 [欧盟调查中国医疗设备公共采购 担忧优先本国企业](/articles/dw/1025797.md)
 
 4-24 [亲巴勒斯坦抗议活动在美国大学蔓延](/articles/dw/1025798.md)
-
-4-24 [美參院通過援烏以台法案  80億美元助印太抗中](/articles/dw/1025799.md)
 
