--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-21 [美韩为更新防卫费分担特别协定举行第二轮谈判](/articles/voa/1015477.md)
+
+5-21 [不满日韩议员出席台湾总统就职 中国抗议称其“违反一中原则”](/articles/voa/1015478.md)
+
+5-21 [与美国不同调 法国称支持国际刑事法院寻求逮捕以色列和哈马斯领导人](/articles/voa/1015479.md)
+
 5-21 [法属新喀里多尼亚暴乱未歇 澳大利亚、新西兰派专机撤侨](/articles/voa/1015480.md)
 
 5-21 [肯塔基州初选看点](/articles/voa/1015481.md)
@@ -594,10 +600,4 @@
 5-9 [习近平访匈，两国领导人会谈将聚焦投资和俄乌冲突](/articles/voa/1015775.md)
 
 5-9 [普京在卫国战争胜利日阅兵式上致辞，指责西方甘冒全球冲突风险](/articles/voa/1015776.md)
-
-5-9 [立陶宛周日总统大选投票，俄罗斯和中国为重要议题](/articles/voa/1015777.md)
-
-5-9 [伊朗官员：国家存在若受威胁将改变核武原则](/articles/voa/1015778.md)
-
-5-9 [拜登公开表态： 若以色列入侵拉法，他不会提供弹药](/articles/voa/1015779.md)
 
