--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-21 [城市的地得｜移民之后](/articles/cdt/340484.md)
+
 5-21 [每日一语 2024.5.20](/articles/cdt/340487.md)
 
 5-21 [【翻车现场】35岁的“老年青年人”被优化，60岁的“青年老年人”再就业](/articles/cdt/340491.md)
@@ -598,6 +600,4 @@
 4-17 [凤羽财经｜重庆燃气利润暴增8倍，重庆人不干了……](/articles/cdt/341630.md)
 
 4-17 [极昼工作室｜基层产科静悄悄](/articles/cdt/341632.md)
-
-4-17 [建设性意见｜同济的学生用愚蠢的方式问了一个重要的大麻问题](/articles/cdt/341634.md)
 
