--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-21 [赖清德就职演讲强调“互不隶属”  国民党：“新两国论”、“违宪”](/articles/dw/1025498.md)
+
 5-21 [賴清德就職：「史上最佳」的台日關係如何互動？](/articles/dw/1025499.md)
 
 5-21 [ICC申請逮捕以哈領袖 拜登：不該劃上等號](/articles/dw/1025500.md)
@@ -598,6 +600,4 @@
 4-24 [中国安全设备企业欧洲两家子公司被欧盟突袭检查](/articles/dw/1025796.md)
 
 4-24 [欧盟调查中国医疗设备公共采购 担忧优先本国企业](/articles/dw/1025797.md)
-
-4-24 [亲巴勒斯坦抗议活动在美国大学蔓延](/articles/dw/1025798.md)
 
