--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-21 [美国和菲律宾同意进行核电合作](/articles/voa/1015475.md)
+
+5-21 [与中国关系惹议 所罗门新总理：澳大利亚仍是首选合作伙伴](/articles/voa/1015476.md)
+
 5-21 [美韩为更新防卫费分担特别协定举行第二轮谈判](/articles/voa/1015477.md)
 
 5-21 [不满日韩议员出席台湾总统就职 中国抗议称其“违反一中原则”](/articles/voa/1015478.md)
@@ -596,8 +600,4 @@
 5-10 [中国再派两艘战舰访柬，美国对中国在柬永久军事存在担忧陡增](/articles/voa/1015773.md)
 
 5-10 [美国今年第一季度超越中国，成为德国最大贸易伙伴](/articles/voa/1015774.md)
-
-5-9 [习近平访匈，两国领导人会谈将聚焦投资和俄乌冲突](/articles/voa/1015775.md)
-
-5-9 [普京在卫国战争胜利日阅兵式上致辞，指责西方甘冒全球冲突风险](/articles/voa/1015776.md)
 
