--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-21 [王五四｜真相是奢侈品，给群众个真像的就行](/articles/cdt/340472.md)
+
 5-21 [【网络民议】北京大学名誉教授，—1](/articles/cdt/340480.md)
 
 5-21 [城市的地得｜移民之后](/articles/cdt/340484.md)
@@ -598,6 +600,4 @@
 4-20 [【CDTV】B站博主@户晨风直播间遇“冲塔”，提及“中共伏地魔”再遭封号](/articles/cdt/341563.md)
 
 4-17 [老爸讲科学｜20年了，那些起诉同仁堂的肾衰竭患者，后来怎么样了？](/articles/cdt/341626.md)
-
-4-17 [凤羽财经｜重庆燃气利润暴增8倍，重庆人不干了……](/articles/cdt/341630.md)
 
