--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-21 [彭博社：台湾一旦落入中共之手，台积电的设备将立刻陷入瘫痪](/articles/voa/1015469.md)
+
+5-21 [台湾立法院续审国会职权修法，场外民众抗议在野党试图削弱总统权责](/articles/voa/1015470.md)
+
 5-21 [耶伦呼吁美欧联手应对中国过剩产能，保护西方制造商的生存](/articles/voa/1015471.md)
 
 5-21 [北京制裁对华强硬而又友台的美国前国会议员加拉格尔](/articles/voa/1015472.md)
@@ -596,8 +600,4 @@
 5-10 [TikTok起诉美国联邦政府，胜算几何？](/articles/voa/1015767.md)
 
 5-10 [联合国机构：自周一以来已有8万人逃离拉法](/articles/voa/1015768.md)
-
-5-10 [中国对俄罗斯出口4月份再度减少](/articles/voa/1015769.md)
-
-5-10 [自由之家将2024年自由奖授予遭中共终身监禁的王炳章](/articles/voa/1015770.md)
 
