--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-22 [欧洲议会大选：怎么选? 选什么?](/articles/dw/1025490.md)
+
 5-21 [一伦敦飞往新加坡的航班遭遇湍流，致1死多伤](/articles/dw/1025491.md)
 
 5-21 [布林肯祝贺赖清德 北京：美方向“台独”分裂势力发出严重错误信号](/articles/dw/1025492.md)
@@ -598,6 +600,4 @@
 4-25 [媒体称马克龙正在运作换掉“过度政治化”的冯德莱恩](/articles/dw/1025788.md)
 
 4-25 [賴清德公布新國安團隊 籲中國「有自信」面對台政府](/articles/dw/1025789.md)
-
-4-25 [TikTok誓言抵抗美國分家令：我們會贏](/articles/dw/1025790.md)
 
