--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-22 [梵蒂冈同时对台海两岸释善意：特使会晤赖清德，国务卿会晤上海教区主教](/articles/voa/1015466.md)
+
 5-22 [港府称继续跟踪网络平台是否违法播放抗议歌曲“愿荣光归香港”](/articles/voa/1015467.md)
 
 5-22 [美国启动新一轮对华关税后，印度企业担忧中国商品倾销风险](/articles/voa/1015468.md)
@@ -598,6 +600,4 @@
 5-10 [中国移民涌入美国南部边境之际，美中恢复遣返合作](/articles/voa/1015764.md)
 
 5-10 [以色列反对美国暂停运送部分武器的决定](/articles/voa/1015765.md)
-
-5-10 [美国将37家中国实体加入制裁清单，涉高空气球、量子技术与核项目及援俄](/articles/voa/1015766.md)
 
