--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-22 [拜登从东北储备中释放一百万桶石油以降低油价](/articles/voa/1015463.md)
+
+5-22 [华府港人龙舟队夺金 冀凝聚美国港人宣扬香港文化 惟面对跨国镇压感惶恐](/articles/voa/1015464.md)
+
+5-22 [英警方：一名被控向香港情报机构提供协助的男子被发现死在公园](/articles/voa/1015465.md)
+
 5-22 [梵蒂冈同时对台海两岸释善意：特使会晤赖清德，国务卿会晤上海教区主教](/articles/voa/1015466.md)
 
 5-22 [港府称继续跟踪网络平台是否违法播放抗议歌曲“愿荣光归香港”](/articles/voa/1015467.md)
@@ -594,10 +600,4 @@
 5-10 [人工智能：美中争夺非洲的新前沿](/articles/voa/1015761.md)
 
 5-10 [美国驻港澳总领事呼吁香港保证网络自由](/articles/voa/1015762.md)
-
-5-10 [印度敦促亲中的马尔代夫缓和局势并改善关系](/articles/voa/1015763.md)
-
-5-10 [中国移民涌入美国南部边境之际，美中恢复遣返合作](/articles/voa/1015764.md)
-
-5-10 [以色列反对美国暂停运送部分武器的决定](/articles/voa/1015765.md)
 
