--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+5-22 [被控为香港情报机构从事间谍活动的英国男子死亡](/articles/nyt/1042747.md)
+
+5-22 [美国寻求与欧洲联手应对中国廉价商品出口激增](/articles/nyt/1042748.md)
+
 5-21 [美国拥抱廉价“中国制造”的时代已经终结](/articles/nyt/1042749.md)
 
 5-21 [“俄罗斯美女”爱中国？一场深伪视频社媒狂欢](/articles/nyt/1042750.md)
@@ -596,8 +600,4 @@
 2-19 [为何硅谷科技巨头仍然在裁员](/articles/nyt/1043045.md)
 
 2-19 [被曝将批评中国作者排除在外，雨果奖陷争议](/articles/nyt/1043046.md)
-
-2-9 [艾未未《十二生肖》：一场神秘的记忆之旅](/articles/nyt/1043047.md)
-
-2-9 [拜登机密文件调查：法律免责，政治噩梦](/articles/nyt/1043048.md)
 
