--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-22 [張展證實已出獄 自由仍受限制](/articles/dw/1025488.md)
+
 5-22 [遭控為港府間諜 前英軍被告「不明原因」身亡](/articles/dw/1025489.md)
 
 5-22 [欧洲议会大选：怎么选? 选什么?](/articles/dw/1025490.md)
@@ -598,6 +600,4 @@
 4-25 [巴黎红磨坊风车叶片掉落](/articles/dw/1025786.md)
 
 4-25 [德检察部门对选项党欧洲议员展开前期调查](/articles/dw/1025787.md)
-
-4-25 [媒体称马克龙正在运作换掉“过度政治化”的冯德莱恩](/articles/dw/1025788.md)
 
