--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-22 [中国主要高铁线路涨价，凸显债务危机深重](/articles/nyt/1042745.md)
+
 5-22 [新航客机事故致一死多伤：乘机遭遇湍流时你该怎么做？](/articles/nyt/1042746.md)
 
 5-22 [被控为香港情报机构从事间谍活动的英国男子死亡](/articles/nyt/1042747.md)
@@ -598,6 +600,4 @@
 2-19 [美国强化法律行动，阻止中国等对手获取技术](/articles/nyt/1043043.md)
 
 2-19 [中美关系改变贸易格局：中国已不是美国最大进口国](/articles/nyt/1043044.md)
-
-2-19 [为何硅谷科技巨头仍然在裁员](/articles/nyt/1043045.md)
 
