--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-22 [华裔加州议员方文思赢得前国会众院议长麦卡锡空出的议席](/articles/voa/1015449.md)
+
 5-22 [马克龙呼吁欧盟大幅增加科技投资，不要依赖美国或中国](/articles/voa/1015450.md)
 
 5-22 [英报告警告中国海军崛起对台海及印太地区的威胁](/articles/voa/1015451.md)
@@ -598,6 +600,4 @@
 5-11 [韩国外长下周访华，或为中日韩三国峰会作最后协调](/articles/voa/1015747.md)
 
 5-10 [两名涉嫌为中国从事间谍活动的英国人将在明年受审](/articles/voa/1015748.md)
-
-5-10 [联大就巴勒斯坦人权利和待遇进行投票，重燃其成为联合国正式成员国希望](/articles/voa/1015749.md)
 
