--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-22 [槽边往事｜当时整架飞机就一个迫降住了](/articles/cdt/340454.md)
+
 5-22 [风慢慢｜郭有才爆火，是一个傲慢、势利和孤独的故事](/articles/cdt/340456.md)
 
 5-22 [南方周末｜人口小县“大部制”：山西试点四年记](/articles/cdt/340458.md)
@@ -598,6 +600,4 @@
 4-18 [凤凰WEEKLY｜美国华人父母，培养出多少“失败的谷爱凌”？](/articles/cdt/341533.md)
 
 4-18 [古老板的老巢｜这么搞，还能发展经济吗？](/articles/cdt/341535.md)
-
-4-18 [猛犸工作室｜一座华北小镇的梦想与现实：成也土地，危也土地](/articles/cdt/341546.md)
 
