--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-22 [中国官媒斥赖清德为“麻烦制造者” 学者:台湾准备好应对外交、军事威胁](/articles/voa/1015443.md)
+
+5-22 [菲海军中将谴责中国武官对电话交谈秘密录音 否认与北京达成任何交易](/articles/voa/1015444.md)
+
 5-22 [全球人工智能安全峰会发表《首尔宣言》](/articles/voa/1015445.md)
 
 5-22 [日本、菲律宾拟7月举行外交国防“2+2”会议](/articles/voa/1015446.md)
@@ -596,8 +600,4 @@
 5-11 [美国务院设“公司”协助友邦抵御中国经济胁迫 分析人士：是经济战，更是政治战](/articles/voa/1015741.md)
 
 5-11 [据报拜登政府拟将中国电动汽车关税提高四倍 北京：这是错上加错](/articles/voa/1015742.md)
-
-5-11 [在南中国海部署浮动核反应堆，中国或引发灾难性后果](/articles/voa/1015743.md)
-
-5-11 [美中举行气候会谈，承诺就减少甲烷排放采取联合行动](/articles/voa/1015744.md)
 
