--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-23 [爱尔兰、挪威和西班牙三国承认巴勒斯坦国](/articles/voa/1015436.md)
+
 5-23 [英国防大臣首次指责中国向俄罗斯提供致命援助](/articles/voa/1015437.md)
 
 5-23 [中国官媒斥赖清德为“麻烦制造者” 学者: 台湾准备好应对外交、军事威胁](/articles/voa/1015438.md)
@@ -598,6 +600,4 @@
 5-11 [美国现在可以扣押俄罗斯国有资产，这将如何运作？](/articles/voa/1015734.md)
 
 5-11 [CECC年度报告呼吁更强有力地制裁破坏香港民主的官员](/articles/voa/1015735.md)
-
-5-11 [中国歼-10向澳军直升机发射热焰弹 观察人士: “危险驱离非偶然”，国际须一致应对](/articles/voa/1015736.md)
 
