--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-23 [众议院议长告诉美国之音：乌克兰应能够“以其认为合适的方式实施战争”](/articles/voa/1015435.md)
+
 5-23 [爱尔兰、挪威和西班牙三国承认巴勒斯坦国](/articles/voa/1015436.md)
 
 5-23 [英国防大臣首次指责中国向俄罗斯提供致命援助](/articles/voa/1015437.md)
@@ -598,6 +600,4 @@
 5-11 [美议员提跨党新法案，授权1.2亿美元支持台湾盟友抗衡中国经济胁迫](/articles/voa/1015733.md)
 
 5-11 [美国现在可以扣押俄罗斯国有资产，这将如何运作？](/articles/voa/1015734.md)
-
-5-11 [CECC年度报告呼吁更强有力地制裁破坏香港民主的官员](/articles/voa/1015735.md)
 
