--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-23 [何加盐｜中文互联网正在加速崩塌](/articles/cdt/340432.md)
+
 5-23 [每日一语 2024.5.22](/articles/cdt/340436.md)
 
 5-22 [六神磊磊读金庸｜“奇技淫巧”四个字又出来了](/articles/cdt/340440.md)
@@ -598,6 +600,4 @@
 4-20 [人物｜一单无法撤销的快递投诉](/articles/cdt/341527.md)
 
 4-20 [城市的地得｜来自故乡的最后一刀](/articles/cdt/341529.md)
-
-4-19 [【CDT报告汇】中国输出数字极权，协助柬埔寨建立“防火墙”（外二篇）](/articles/cdt/341530.md)
 
