--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+5-23 [美众议院“中国问题委员会”要求调查中国游泳队禁药事件](/articles/nyt/1042742.md)
+
+5-23 [郭文贵被控欺诈案在美国开审，涉案金额逾10亿美元](/articles/nyt/1042743.md)
+
 5-23 [从沙皇到中共，“跨国镇压”的前世今生](/articles/nyt/1042744.md)
 
 5-22 [中国主要高铁线路涨价，凸显债务危机深重](/articles/nyt/1042745.md)
@@ -596,8 +600,4 @@
 2-19 [报告称美国风投公司向中国芯片行业投资逾10亿美元](/articles/nyt/1043040.md)
 
 2-19 [中国通缩警报：居民消费价格创14年来最大跌幅](/articles/nyt/1043041.md)
-
-2-19 [苹果Vision Pro测评：令人印象深刻，但“槽点”很多](/articles/nyt/1043042.md)
-
-2-19 [美国强化法律行动，阻止中国等对手获取技术](/articles/nyt/1043043.md)
 
