--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 5-23 [Lola｜边疆、民族与宗教：在佛的光辉下](/articles/cdt/340428.md)
 
+5-23 [维舟的方舟｜支持那些值得支持的人](/articles/cdt/340430.md)
+
 5-23 [何加盐｜中文互联网正在加速崩塌](/articles/cdt/340432.md)
 
 5-23 [每日一语 2024.5.22](/articles/cdt/340436.md)
@@ -598,6 +600,4 @@
 4-19 [每日一语 2024.4.19](/articles/cdt/341518.md)
 
 4-19 [极昼工作室｜血浆站背后的县城青年](/articles/cdt/341526.md)
-
-4-20 [人物｜一单无法撤销的快递投诉](/articles/cdt/341527.md)
 
