--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-23 [关税不是美国最好的武器](/articles/nyt/1042741.md)
+
 5-23 [美众议院“中国问题委员会”要求调查中国游泳队禁药事件](/articles/nyt/1042742.md)
 
 5-23 [郭文贵被控欺诈案在美国开审，涉案金额逾10亿美元](/articles/nyt/1042743.md)
@@ -598,6 +600,4 @@
 2-19 [拜登机密文件调查：法律免责，政治噩梦](/articles/nyt/1043039.md)
 
 2-19 [报告称美国风投公司向中国芯片行业投资逾10亿美元](/articles/nyt/1043040.md)
-
-2-19 [中国通缩警报：居民消费价格创14年来最大跌幅](/articles/nyt/1043041.md)
 
