--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-23 [北京与尼加拉瓜的地缘政治联姻—大运河项目何去何从备受关注](/articles/voa/1015425.md)
+
 5-23 [美国出现第二例人类因奶牛疫情而感染禽流感的病例](/articles/voa/1015426.md)
 
 5-23 [瑞典向乌克兰提供总额70亿美元的军援](/articles/voa/1015427.md)
@@ -598,6 +600,4 @@
 5-11 [美国再出招封杀华为等中企 观察人士:这一棒“太软”恐无效](/articles/voa/1015723.md)
 
 5-11 [专访军史专家汉森：中国是乌战最大赢家？](/articles/voa/1015724.md)
-
-5-11 [日本通过修法将成立“统合作战司令部” 加强美日合作应对中朝安全挑战](/articles/voa/1015725.md)
 
