--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,7 +7,7 @@
 
 5-23 [维舟的方舟｜支持那些值得支持的人](/articles/cdt/340430.md)
 
-5-23 [何加盐｜中文互联网正在加速崩塌](/articles/cdt/340432.md)
+5-23 [【404文库】何加盐｜中文互联网正在加速崩塌](/articles/cdt/340432.md)
 
 5-23 [每日一语 2024.5.22](/articles/cdt/340436.md)
 
