--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-23 [西坡原创｜“这个社会为啥这么压抑？”](/articles/cdt/340420.md)
+
 5-23 [往事与随想｜中文互联网崩塌，平台应当提供备份下载](/articles/cdt/340423.md)
 
 5-23 [Lola｜边疆、民族与宗教：在佛的光辉下](/articles/cdt/340428.md)
@@ -598,6 +600,4 @@
 4-20 [走读新生｜“收费上升的幻觉”，会不会只是刚刚开始？](/articles/cdt/341509.md)
 
 4-20 [【网络民议】顶端新闻｜反对调休的声音，不能装作听不到](/articles/cdt/341515.md)
-
-4-19 [每日一语 2024.4.19](/articles/cdt/341518.md)
 
