--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-23 [安安侃车｜港珠澳大桥激起众怒？不少司机上了桥就被劝退](/articles/cdt/340414.md)
+
 5-23 [中新经纬｜“我是你妈”不能发，小天才回应！](/articles/cdt/340417.md)
 
 5-23 [西坡原创｜“这个社会为啥这么压抑？”](/articles/cdt/340420.md)
@@ -598,6 +600,4 @@
 4-20 [凤凰网｜“核酸大王”，变身自媒体创业导师](/articles/cdt/341502.md)
 
 4-20 [星球商业评论｜秦始皇同款虽好 可不要贪吃哦](/articles/cdt/341506.md)
-
-4-20 [走读新生｜“收费上升的幻觉”，会不会只是刚刚开始？](/articles/cdt/341509.md)
 
