--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-24 [六四舞台剧首以英语伦敦公演 港人监制: 盼公义长存](/articles/voa/1015407.md)
+
+5-24 [俄军副总参谋长因受贿指控被捕](/articles/voa/1015408.md)
+
+5-24 [俄导弹袭击哈尔科夫市打死七人,泽连斯基呼吁盟友提供更多武器](/articles/voa/1015409.md)
+
 5-24 [推特上的中国：北京环台军演吓到了谁？](/articles/voa/1015410.md)
 
 5-24 [新闻周刊：乌军过去八天摧毁至少六架俄军战机](/articles/voa/1015411.md)
@@ -594,10 +600,4 @@
 5-12 [立陶宛周日举行总统大选 对俄罗斯担忧主导选民投票](/articles/voa/1015705.md)
 
 5-12 [王毅赞第一夫人访欧“魅力外交”， 彭丽媛跃权力核心传闻再起](/articles/voa/1015706.md)
-
-5-12 [中国可能通过从应用程序取得的数据加强海外宣传](/articles/voa/1015707.md)
-
-5-12 [悬缺一年半后 中国驻印度大使徐飞洪履新](/articles/voa/1015708.md)
-
-5-12 [台湾乐团“五月天”假唱疑云澄清 上海文旅局：未发现违法行为](/articles/voa/1015709.md)
 
