--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-24 [拜登驳斥国际刑事法院逮捕以色列官员的请求](/articles/voa/1015405.md)
+
+5-24 [缅甸悄然宣布：计划研究13年前暂停的有争议中国大坝项目](/articles/voa/1015406.md)
+
 5-24 [六四舞台剧首以英语伦敦公演 港人监制: 盼公义长存](/articles/voa/1015407.md)
 
 5-24 [俄军副总参谋长因受贿指控被捕](/articles/voa/1015408.md)
@@ -596,8 +600,4 @@
 5-12 [俄军加剧对乌克兰哈尔科夫州越境攻击，乌数千平民被迫撤离](/articles/voa/1015703.md)
 
 5-12 [在澳被捕的美军退役飞行员曾与一中国黑客合作共事](/articles/voa/1015704.md)
-
-5-12 [立陶宛周日举行总统大选 对俄罗斯担忧主导选民投票](/articles/voa/1015705.md)
-
-5-12 [王毅赞第一夫人访欧“魅力外交”， 彭丽媛跃权力核心传闻再起](/articles/voa/1015706.md)
 
