--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-24 [中国在台湾周边展开“惩戒性”军演](/articles/nyt/1042739.md)
+
 5-23 [马斯克的外交哲学：拉拢右翼领导人，然后从中获益](/articles/nyt/1042740.md)
 
 5-23 [关税不是美国最好的武器](/articles/nyt/1042741.md)
@@ -598,6 +600,4 @@
 2-19 [刘建超或接任中国外交部长，“战狼”将成过去式？](/articles/nyt/1043037.md)
 
 2-19 [艾未未《十二生肖》：一场神秘的记忆之旅](/articles/nyt/1043038.md)
-
-2-19 [拜登机密文件调查：法律免责，政治噩梦](/articles/nyt/1043039.md)
 
