--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-24 [每日一语 2024.5.23](/articles/cdt/340393.md)
+
 5-23 [【404文库】“我们这个时代，每个人都是影像创作者，守护好自己的影像，守护好自己这三年的记忆”（外二篇）](/articles/cdt/340408.md)
 
 5-23 [安安侃车｜港珠澳大桥激起众怒？不少司机上了桥就被劝退](/articles/cdt/340414.md)
@@ -598,6 +600,4 @@
 4-20 [咸蛋bot｜高丙芳案现审辩冲突：辩护人被强行带出法庭，被告人宣判前突遭逮捕](/articles/cdt/341489.md)
 
 4-20 [冷杉RECORD｜女儿被割喉的340天](/articles/cdt/341499.md)
-
-4-20 [凤凰网｜“核酸大王”，变身自媒体创业导师](/articles/cdt/341502.md)
 
