--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-24 [客座評論：台灣變得和香港愈來愈像](/articles/dw/1025472.md)
+
 5-23 [柏林火车站周三因“悲剧事故”暂时关闭](/articles/dw/1025473.md)
 
 5-23 [美欧欲对中国电动车加税 中国威胁反制](/articles/dw/1025474.md)
@@ -598,6 +600,4 @@
 4-26 [知情人士：字节跳动宁愿关闭也不出售美国TikTok](/articles/dw/1025770.md)
 
 4-26 [广东暴雨来袭   洪灾提早来到](/articles/dw/1025771.md)
-
-4-26 [乌克兰敦促海外男性侨民返国效力](/articles/dw/1025772.md)
 
