--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,9 +3,15 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-24 [知识分子｜那些“对赌”失败的青椒们](/articles/cdt/340385.md)
+
 5-24 [每日一语 2024.5.23](/articles/cdt/340393.md)
 
+5-24 [北青深一度｜19岁女孩最后的人生：相亲、订婚、投河自杀](/articles/cdt/340394.md)
+
 5-24 [冰川思享号｜热点事件舆论一再反转，“信息茧房”背不动这个锅](/articles/cdt/340395.md)
+
+5-24 [导筒directube｜官方：未经审核备案的微短剧，不得上网传播](/articles/cdt/340396.md)
 
 5-24 [张3丰的世界｜我想造一个信息茧房，结果失败了](/articles/cdt/340398.md)
 
@@ -594,10 +600,4 @@
 4-20 [张3丰的世界｜川渝燃气危机：一切鬼鬼祟祟都是犯罪](/articles/cdt/341468.md)
 
 4-20 [看客inSight｜漂在非洲的中国商人，在恐惧中等待暴富神话](/articles/cdt/341471.md)
-
-4-20 [剑客写字的地方｜把悲哀当笑料，并不高明](/articles/cdt/341475.md)
-
-4-20 [每日一语 2024.4.19](/articles/cdt/341479.md)
-
-4-20 [林孤小姐｜还是成都更狠啊](/articles/cdt/341483.md)
 
