--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-24 [中國環台軍演次日 稱欲檢視「聯合奪權」能力](/articles/dw/1025470.md)
+
+5-24 [客座评论：国家队进场收房子？](/articles/dw/1025471.md)
+
 5-24 [客座評論：台灣變得和香港愈來愈像](/articles/dw/1025472.md)
 
 5-23 [柏林火车站周三因“悲剧事故”暂时关闭](/articles/dw/1025473.md)
@@ -596,8 +600,4 @@
 4-26 [布林肯会晤习近平 称中国对俄军工支持引忧](/articles/dw/1025768.md)
 
 4-26 [乌克兰农业部长涉嫌贪污被捕并获保释](/articles/dw/1025769.md)
-
-4-26 [知情人士：字节跳动宁愿关闭也不出售美国TikTok](/articles/dw/1025770.md)
-
-4-26 [广东暴雨来袭   洪灾提早来到](/articles/dw/1025771.md)
 
