--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-24 [欧盟通过人工智能法](/articles/dw/1025468.md)
+
 5-24 [台灣立法院攻防戰：「國會改革」爭議重點一次看](/articles/dw/1025469.md)
 
 5-24 [中國環台軍演次日 稱欲檢視「聯合奪權」能力](/articles/dw/1025470.md)
@@ -598,6 +600,4 @@
 4-26 [长平观察：中国兴奋剂风波，难以完成的调查](/articles/dw/1025766.md)
 
 4-26 [越南国会主席突然宣布辞职](/articles/dw/1025767.md)
-
-4-26 [布林肯会晤习近平 称中国对俄军工支持引忧](/articles/dw/1025768.md)
 
