--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-24 [日韩连手制裁涉及向俄罗斯提供朝鲜武器的供应商](/articles/voa/1015393.md)
+
+5-24 [澳大利亚法官裁定涉嫌训练中国飞行员的前美国海军陆战队员可以被引渡](/articles/voa/1015394.md)
+
 5-24 [美国和盟友发表联合声明，呼吁让台湾出席世卫大会](/articles/voa/1015395.md)
 
 5-24 [香港向英国寻求被控从事间谍活动男子的死亡“真相”](/articles/voa/1015396.md)
@@ -596,8 +600,4 @@
 5-13 [菲律宾政府下令加强保护EEZ内岛礁 致力阻止中国填海造陆](/articles/voa/1015691.md)
 
 5-13 [国际特赦组织：中国“跨国镇压”日益扩张 制造海外留学生的“恐惧氛围”](/articles/voa/1015692.md)
-
-5-13 [俄军指责乌克兰发动“大规模”致命袭击的同时 加剧对乌克兰的越境攻击](/articles/voa/1015693.md)
-
-5-13 [立陶宛大选第一轮投票无人得票过半 第二轮投票月底进行](/articles/voa/1015694.md)
 
