--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-24 [台湾能否抵御中国军事入侵？](/articles/dw/1025466.md)
+
+5-24 [澳大利亚地方法院裁定前美国飞行员符合引渡条件](/articles/dw/1025467.md)
+
 5-24 [欧盟通过人工智能法](/articles/dw/1025468.md)
 
 5-24 [台灣立法院攻防戰：「國會改革」爭議重點一次看](/articles/dw/1025469.md)
@@ -596,8 +600,4 @@
 4-27 [重重压力之下 中国放宽跨境数据传输限制](/articles/dw/1025764.md)
 
 4-27 [TikTok被迫“分家” 谁可能接盘？](/articles/dw/1025765.md)
-
-4-26 [长平观察：中国兴奋剂风波，难以完成的调查](/articles/dw/1025766.md)
-
-4-26 [越南国会主席突然宣布辞职](/articles/dw/1025767.md)
 
