--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-24 [世界媒体看中国：对台暴怒与对内政治](/articles/voa/1015392.md)
+
 5-24 [日韩连手制裁涉及向俄罗斯提供朝鲜武器的供应商](/articles/voa/1015393.md)
 
 5-24 [澳大利亚法官裁定涉嫌训练中国飞行员的前美国海军陆战队员可以被引渡](/articles/voa/1015394.md)
@@ -598,6 +600,4 @@
 5-13 [韩国外长时隔6年半首度访华 就两国推动关系发展进行讨论](/articles/voa/1015690.md)
 
 5-13 [菲律宾政府下令加强保护EEZ内岛礁 致力阻止中国填海造陆](/articles/voa/1015691.md)
-
-5-13 [国际特赦组织：中国“跨国镇压”日益扩张 制造海外留学生的“恐惧氛围”](/articles/voa/1015692.md)
 
