--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-24 [中國環台軍演次日 稱欲檢視「聯合奪權」能力](/articles/dw/1025461.md)
+
 5-24 [香港舉重健力總會主席辞职 此前两次将香港称为“国家”惹批评](/articles/dw/1025462.md)
 
 5-24 [德国执政党议员：台湾已是独立民主国家](/articles/dw/1025463.md)
@@ -598,6 +600,4 @@
 4-27 [以旧换新！中国出大招推动汽车市场](/articles/dw/1025759.md)
 
 4-27 [全美各地高校师生支持巴勒斯坦](/articles/dw/1025760.md)
-
-4-27 [中国兴奋剂事件  国际奥委会力挺WADA](/articles/dw/1025761.md)
 
