--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-25 [美国宣布向乌克兰提供新的2.75亿美元重大军援](/articles/voa/1015383.md)
+
 5-25 [巴基斯坦给在恐袭事件遇难的中国人每人赔偿52万美元](/articles/voa/1015384.md)
 
 5-25 [联合国国际法院下令以色列停止对加沙南部拉法市的进攻](/articles/voa/1015385.md)
@@ -598,6 +600,4 @@
 5-13 [刺激经济下猛药，中国万亿元超长期特别国债本周首批发行](/articles/voa/1015681.md)
 
 5-13 [在中国发出威胁后，菲律宾将调查外国外交官的行为](/articles/voa/1015682.md)
-
-5-13 [亲友遭噤声施压 公民记者张展出狱后恐难获自由](/articles/voa/1015683.md)
 
