--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-25 [谷雨实验室｜逃离杨永信16年，他的人生还停在被电击的那一刻](/articles/cdt/340372.md)
+
 5-25 [常识和洞见｜挣扎生活的年轻人，不是“群魔”](/articles/cdt/340375.md)
 
 5-24 [知识分子｜那些“对赌”失败的青椒们](/articles/cdt/340385.md)
@@ -598,6 +600,4 @@
 4-21 [每日一语 2024.4.20](/articles/cdt/341451.md)
 
 4-21 [歪脑｜图片故事：我的时薪](/articles/cdt/341462.md)
-
-4-21 [建设性意见｜重庆燃气退费，接下来看成都的了](/articles/cdt/341464.md)
 
