--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-25 [美农业部：送去屠宰的美国奶牛组织样本中检测到禽流感病毒](/articles/voa/1015377.md)
+
 5-25 [解放军环台军演 众院中共问题委员会两党领袖：中共公然恐吓台湾完全不可接受](/articles/voa/1015378.md)
 
 5-25 [美国应该取消中国的永久性正常贸易关系吗？](/articles/voa/1015379.md)
@@ -598,6 +600,4 @@
 5-14 [香港记协主席及前资深记者谈23条立法后新闻自由 陈朗升：戴着脚镣跳舞](/articles/voa/1015675.md)
 
 5-14 [中国和柬埔寨将开始年度军演](/articles/voa/1015676.md)
-
-5-14 [三人涉助香港情报部门于英国被起诉 流亡港人指显示处理跨境打压决心 中方强烈谴责编造案件](/articles/voa/1015677.md)
 
