--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+5-25 [郭文贵被控巨额诈骗案开审](/articles/dw/1025452.md)
+
+5-25 [台海军演结束 台北指责北京破坏稳定](/articles/dw/1025453.md)
+
+5-25 [台湾国会职权修法 民众爆发抗议](/articles/dw/1025454.md)
+
 5-25 [国际法院要求以色列立刻停止在拉法的军事行动](/articles/dw/1025455.md)
 
 5-25 [中情局前雇员承认为中国从事间谍活动](/articles/dw/1025456.md)
@@ -594,10 +600,4 @@
 4-28 [研究：悲观的德国年轻人正在右转](/articles/dw/1025750.md)
 
 4-28 [美国限期“不卖就禁” 还有那些国家禁用TikTok?](/articles/dw/1025751.md)
-
-4-28 [摆脱对台湾芯片依赖 美国能办到吗？](/articles/dw/1025752.md)
-
-4-28 [“最想前往工作国家” 德国居非英语国家榜首](/articles/dw/1025753.md)
-
-4-28 [德国五分之一老年妇女面临贫困](/articles/dw/1025754.md)
 
