--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-25 [围台军演收场，台湾平静以对，台军意外显露随时击落解放军军机的能力](/articles/voa/1015366.md)
+
+5-25 [专访许成钢 ：中共为何比苏共长寿？两件事救了中共政权](/articles/voa/1015367.md)
+
 5-25 [人权观察：中国胁迫藏人大规模迁移](/articles/voa/1015368.md)
 
 5-25 [巴布亚新几内亚发生严重山体滑坡 据称已300多人遭活埋](/articles/voa/1015369.md)
@@ -596,8 +600,4 @@
 5-14 [过境口岸关闭，加沙人道援助停止分发](/articles/voa/1015664.md)
 
 5-14 [台湾新总统上任后台海前景如何？台驻美代表：赖清德会负责任，不会正式宣布独立](/articles/voa/1015665.md)
-
-5-14 [华北雁塘：失去法国？中国首脑外交在欧洲的失败](/articles/voa/1015666.md)
-
-5-14 [俄罗斯在乌克兰扩大战线，白宫表示正尽一切可能向乌军急运武器](/articles/voa/1015667.md)
 
