--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-25 [旧闻评论｜孤独的太原跳桥者](/articles/cdt/340340.md)
+
+5-25 [唐师三百手｜噫吁嚱！上海刷新世界最低生育率纪录](/articles/cdt/340344.md)
+
+5-25 [【重温】吕德文｜简单问题复杂化，是基层形式主义问题的根源](/articles/cdt/340345.md)
+
 5-25 [每日一语 2024.5.24](/articles/cdt/340350.md)
 
 5-25 [歪脑｜贾葭：昨日世界的崩塌 如飞蛾扑火般的个人史](/articles/cdt/340362.md)
@@ -594,10 +600,4 @@
 4-22 [【404文库】维度新闻｜9岁坠亡男孩曾被罚抄词1万遍，家长翻着作业本止不住颤抖](/articles/cdt/341432.md)
 
 4-22 [封面新闻｜从医者变成病人，“鸿茅药酒事件”当事人谭秦东的劫后余生](/articles/cdt/341434.md)
-
-4-22 [风慢慢｜说“俄罗斯必败”的冯玉军，不再是复旦的了](/articles/cdt/341437.md)
-
-4-22 [【404文库】“直到今天，朱砂在仁丹配方中的含量仍居高不下”（外二篇）](/articles/cdt/341439.md)
-
-4-22 [【CDT周报】第166期：如果自己在中国生活，是否必须接受燃气涨价？](/articles/cdt/341442.md)
 
