--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-25 [七国集团财长们支持用冻结俄罗斯资产孳息援助乌克兰的方案](/articles/voa/1015365.md)
+
 5-25 [围台军演收场，台湾平静以对，台军意外显露随时击落解放军军机的能力](/articles/voa/1015366.md)
 
 5-25 [专访许成钢 ：中共为何比苏共长寿？两件事救了中共政权](/articles/voa/1015367.md)
@@ -598,6 +600,4 @@
 5-14 [众院中共问题特设委员会主席与几位议员致函华盛顿市长，呼吁首都与台北结成姐妹市](/articles/voa/1015663.md)
 
 5-14 [过境口岸关闭，加沙人道援助停止分发](/articles/voa/1015664.md)
-
-5-14 [台湾新总统上任后台海前景如何？台驻美代表：赖清德会负责任，不会正式宣布独立](/articles/voa/1015665.md)
 
