--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 5-26 [城市的地得｜不要跳桥：城市中的新悲伤](/articles/cdt/340323.md)
 
+5-26 [盐族｜专制统治是如何统一极端异化的思想而欺诈人民的？](/articles/cdt/340330.md)
+
 5-26 [月光博客｜中文互联网内容正在逐步消失](/articles/cdt/340334.md)
 
 5-25 [旧闻评论｜孤独的太原跳桥者](/articles/cdt/340340.md)
@@ -598,6 +600,4 @@
 4-22 [天涯行路｜输入法，也能带来一点心安](/articles/cdt/341411.md)
 
 4-22 [冰川思享号｜重庆成都严查“燃气刺客”，行业寒气不可传递给普通人](/articles/cdt/341413.md)
-
-4-22 [三联生活周刊｜7.7亿元平安信托延期兑付：被套牢的保险业务员和普通投资者](/articles/cdt/341425.md)
 
