--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-26 [台湾十多万民众抗议立法院扩权，赖清德呼吁国会重视这些声音](/articles/voa/1015364.md)
+
 5-25 [七国集团财长们支持用冻结俄罗斯资产孳息援助乌克兰的方案](/articles/voa/1015365.md)
 
 5-25 [围台军演收场，台湾平静以对，台军意外显露随时击落解放军军机的能力](/articles/voa/1015366.md)
@@ -598,6 +600,4 @@
 5-14 [普京换防长：为一场长期战争做准备？](/articles/voa/1015662.md)
 
 5-14 [众院中共问题特设委员会主席与几位议员致函华盛顿市长，呼吁首都与台北结成姐妹市](/articles/voa/1015663.md)
-
-5-14 [过境口岸关闭，加沙人道援助停止分发](/articles/voa/1015664.md)
 
