--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-27 [俄罗斯攻击哈尔科夫购物区造成更多的人死亡](/articles/voa/1015347.md)
+
 5-27 [哈马斯火箭攻击特拉维夫，但没有造成损失](/articles/voa/1015348.md)
 
 5-27 [赖清德就职和中国军演后，首个美国国会代表团抵台访问](/articles/voa/1015349.md)
@@ -598,6 +600,4 @@
 5-15 [美中在瑞士开始人工智能会谈，讨论安全关切](/articles/voa/1015645.md)
 
 5-15 [拜登宣布对中国产品加征关税,抨击北京“作弊”](/articles/voa/1015646.md)
-
-5-15 [意经济部长称美对华关税“非常严厉”，G7财长将讨论贸易碎片化风险](/articles/voa/1015647.md)
 
