--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-27 [报告：朝鲜计划到6月4日发射卫星](/articles/voa/1015345.md)
+
 5-27 [德克萨斯州、奥克拉何马州和阿肯色州遭遇恶劣天气，至少14人死亡](/articles/voa/1015346.md)
 
 5-27 [俄罗斯攻击哈尔科夫购物区造成更多的人死亡](/articles/voa/1015347.md)
@@ -598,6 +600,4 @@
 5-15 [联合国秘书长对以色列在加沙拉法的军事行动升级感到“震惊”](/articles/voa/1015643.md)
 
 5-15 [哈佛大学同意讨论中东冲突后学生结束抗议活动](/articles/voa/1015644.md)
-
-5-15 [美中在瑞士开始人工智能会谈，讨论安全关切](/articles/voa/1015645.md)
 
