--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-27 [七国集团财长对中国廉价出口产品发出警告](/articles/nyt/1042734.md)
+
 5-27 [耳目与监控：习近平如何将系统性控制嵌入中国人日常生活](/articles/nyt/1042735.md)
 
 5-24 [财富、毒品和性：走上美国政坛的“硅谷公主”的另一面](/articles/nyt/1042736.md)
@@ -598,6 +600,4 @@
 2-20 [是奉承还是文化挪用？旧金山对参选人“编造”中文名说不](/articles/nyt/1043032.md)
 
 2-20 [比亚迪是如何成为“特斯拉杀手”的](/articles/nyt/1043033.md)
-
-2-19 [面对人权指控，大众汽车等企业重新检视在新疆业务](/articles/nyt/1043034.md)
 
