--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-27 [美国资深议员重申支持台湾抵抗侵略](/articles/voa/1015340.md)
+
+5-27 [中国宣布防长将出席“香格里拉对话” 预计会与美国防长会晤](/articles/voa/1015341.md)
+
 5-27 [韩中日领导人称朝鲜半岛稳定是“共同利益”](/articles/voa/1015342.md)
 
 5-27 [南太地区美中角力加剧 中共对外联络部长刘建超访问瓦努阿图](/articles/voa/1015343.md)
@@ -596,8 +600,4 @@
 5-15 [拜登把对中国电动车的关税翻两番，旨在预先制止未来进口激增](/articles/voa/1015638.md)
 
 5-15 [八名TikTok内容创作者状告联邦政府，声称剥离TikTok的新法律违宪](/articles/voa/1015639.md)
-
-5-15 [拜登对价值180亿美元的中国进口产品加征关税，有关各方如何看待？](/articles/voa/1015640.md)
-
-5-15 [拜登政府示意，如中国电动汽车公司转产墨西哥，华盛顿或将额外加征关税](/articles/voa/1015641.md)
 
