--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-27 [巴布亚新几内亚山体滑坡恐已导致2000多人被活埋](/articles/voa/1015339.md)
+
 5-27 [美国资深议员重申支持台湾抵抗侵略](/articles/voa/1015340.md)
 
 5-27 [中国宣布防长将出席“香格里拉对话” 预计会与美国防长会晤](/articles/voa/1015341.md)
@@ -598,6 +600,4 @@
 5-15 [中国是否取消海峡中线 台湾最坏打算是什么？](/articles/voa/1015637.md)
 
 5-15 [拜登把对中国电动车的关税翻两番，旨在预先制止未来进口激增](/articles/voa/1015638.md)
-
-5-15 [八名TikTok内容创作者状告联邦政府，声称剥离TikTok的新法律违宪](/articles/voa/1015639.md)
 
