--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-27 [风慢慢｜叶赫那拉守国门，是愚民的自嗨](/articles/cdt/340298.md)
+
 5-27 [亮见｜做刘强东的兄弟，您也配？](/articles/cdt/340304.md)
 
 5-27 [端传媒｜下岗与工运、牢狱与监视、疾病与衰老——重返工运领袖孟晗的前半生（节选）](/articles/cdt/340308.md)
@@ -598,6 +600,4 @@
 4-23 [西北守护神｜著名环保人士李根山含冤入狱，狱中坚持举报被关“小黑屋”，妻子不得探视](/articles/cdt/341380.md)
 
 4-23 [餐企老板内参｜46万家“阵亡”，一季度餐饮市场有点惨](/articles/cdt/341385.md)
-
-4-23 [犯犯之谈｜一件令我恐惧、愤怒、绝望的“小事”](/articles/cdt/341387.md)
 
