--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-27 [德国前军官因向俄罗斯间提供情报获罪](/articles/dw/1025431.md)
+
+5-27 [立陶宛总统选举获连任 中俄是敌人 美国是盟友？](/articles/dw/1025432.md)
+
 5-27 [中国最后一座大清真寺圆顶被“中国化”](/articles/dw/1025433.md)
 
 5-27 [赖清德就职后首个美国国会代表团访台表支持](/articles/dw/1025434.md)
@@ -596,8 +600,4 @@
 4-30 [国际刑事法院将对以色列总理发出逮捕令？](/articles/dw/1025729.md)
 
 4-30 [美运动员团体呼吁对中国兴奋剂事件进行独立调查](/articles/dw/1025730.md)
-
-4-30 [德国联邦国防军嫌疑人承认为俄罗斯提供情报](/articles/dw/1025731.md)
-
-4-30 [两名乌克兰伤兵在德国遇刺身亡](/articles/dw/1025732.md)
 
