--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-28 [北约秘书长敦促盟国取消对乌克兰使用受援武器袭击俄罗斯的限制](/articles/voa/1015331.md)
+
+5-28 [反制中国环台封锁 美众议员访团:台湾应强化反登陆、海上战力](/articles/voa/1015332.md)
+
 5-27 [中国加紧扶持半导体产业，推出注册资本三千多亿的第三期投资基金](/articles/voa/1015333.md)
 
 5-27 [中日韩峰会举行 韩日在美中之间平衡避险](/articles/voa/1015334.md)
@@ -596,8 +600,4 @@
 5-15 [布林肯在访问基辅时重申美国对乌克兰的支持](/articles/voa/1015629.md)
 
 5-15 [美中举行首次政府间人工智能对话，为何外界期望值不高](/articles/voa/1015630.md)
-
-5-15 [以色列公布加沙新的平民死亡数字](/articles/voa/1015631.md)
-
-5-15 [美国禁毒事务总管致函世界反兴奋剂机构：对中国运动员药检阳性指控“深感关切”](/articles/voa/1015632.md)
 
