--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-28 [每日一语 2024.5.27](/articles/cdt/340273.md)
+
 5-27 [风声OPINION｜中国房地产政策“史诗级”巨变，全面学习新加坡模式可行吗？](/articles/cdt/340277.md)
 
 5-27 [四环青年｜全家放弃继承才能销号？运营商别太为难人](/articles/cdt/340279.md)
@@ -598,6 +600,4 @@
 4-24 [视知产研究院｜土地财政一熄火，水电气就齐刷刷都涨价了](/articles/cdt/341350.md)
 
 4-24 [每日一语 2024.4.23](/articles/cdt/341355.md)
-
-4-24 [【敏感词库】马英九口误、维吾尔族出版商被捕、户晨风直播遭冲塔](/articles/cdt/341366.md)
 
