--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-28 [中国是如何在产业政策上遥遥领先于世界的](/articles/nyt/1042730.md)
+
 5-28 [中日韩重启三方会谈：聚焦贸易合作，避谈区域安全问题](/articles/nyt/1042731.md)
 
 5-27 [当人人都在讨论“脱钩”，中美经济仍然紧密相连](/articles/nyt/1042732.md)
@@ -598,6 +600,4 @@
 2-21 [不一样的《肖申克》：一部由外国演员出演的中文话剧](/articles/nyt/1043028.md)
 
 2-21 [从丈夫手中接过战旗，纳瓦尔尼遗孀召集反对派继续抗争](/articles/nyt/1043029.md)
-
-2-20 [绝境中的慰藉与雄心：纳瓦尔尼最后的日子](/articles/nyt/1043030.md)
 
