--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-28 [为什么拜登不想让美国人购买廉价中国电动汽车](/articles/nyt/1042728.md)
+
 5-28 [赖清德就职后首个美国国会代表团访问台湾](/articles/nyt/1042729.md)
 
 5-28 [中国是如何在产业政策上遥遥领先于世界的](/articles/nyt/1042730.md)
@@ -598,6 +600,4 @@
 2-21 [被枪击碎的美国梦：在帕克兰案中失去儿子的中国移民家庭](/articles/nyt/1043026.md)
 
 2-21 [中国的“体育场外交”给非洲国家带来了什么](/articles/nyt/1043027.md)
-
-2-21 [不一样的《肖申克》：一部由外国演员出演的中文话剧](/articles/nyt/1043028.md)
 
