--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-28 [阿喀琉斯与龟｜李自成雕像，和大明朝的“黑客帝国难题”](/articles/cdt/340266.md)
+
 5-28 [张3丰的世界｜恰恰是防护网哲学加剧了自杀](/articles/cdt/340269.md)
 
 5-28 [新新默存｜王五四：这届兄弟不行](/articles/cdt/340270.md)
@@ -598,6 +600,4 @@
 4-24 [看理想｜我们只剩“黄色新闻”可看了吗？](/articles/cdt/341344.md)
 
 4-24 [书写者｜不准农民种地的纪云浩副书记，毛星火起诉吧](/articles/cdt/341346.md)
-
-4-24 [西坡原创｜停滞，是不知不觉发生的](/articles/cdt/341348.md)
 
