--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-28 [台湾国会改革法案三读通过，公民响应“青鸟行动”抗议修法](/articles/voa/1015309.md)
+
 5-28 [国事光析：再谈中国社会溃败的“面积”](/articles/voa/1015310.md)
 
 5-28 [涉偷技术转职华为，韩国起诉前SK海力士中国员工](/articles/voa/1015311.md)
@@ -598,6 +600,4 @@
 5-16 [乌军从东北部分地区撤退，布林肯在基辅宣布20亿美元新军援](/articles/voa/1015607.md)
 
 5-16 [以色列防长与总理内塔尼亚胡就战后加沙治理问题争吵不休](/articles/voa/1015608.md)
-
-5-16 [拜登和特朗普同意在6月和9月辩论](/articles/voa/1015609.md)
 
